CI images update

--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-19 00:28:50
+lastsearch = 2024-07-19 04:51:56
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -22,9 +22,9 @@ title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
 url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
 
 [foreverbedding.net]
-match = -33.3%%
-title = Bộ ga chun Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-velina-v16
+match = -57.1%%
+title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
 match = -23.8%%
@@ -110,4 +110,9 @@ url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
 match = -85.7%%
 title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
+
+[quoccuongmattress.vn]
+match = -100.0%%
+title = Bộ Chăn Ga Gối Gấm 4 món nhập khẩu cao cấp hoạ tiết in ...
+url = https://quoccuongmattress.vn/san-pham/bo-chan-ga-goi-gam-4-mon-nhap-khau-cao-cap-hoa-tiet-in-hoa-ma-02/
 
