--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-19 03:32:30
+lastsearch = 2024-07-19 04:44:44
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -22,14 +22,14 @@ title = Ga phủ giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loạ
 url = https://shopee.vn/list/ga phủ giường
 
 [foreverbedding.net]
-match = -32.1%%
-title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
+match = -7.1%%
+title = Top 10+ Bộ Chăn Ga Gối Đệm Màu Đỏ Hot Nhất Hiện Nay
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-mau-do
 
 [changagoidemsonghong.com]
-match = -28.6%%
-title = Chăn ga gối Home H19 066 cao cấp chính hãng Sông Hồng
-url = https://changagoidemsonghong.com/chan-ga-goi-h19-066
+match = 35.7%%
+title = Bộ chăn ga gối cao cấp mã UC22-018
+url = https://changagoidemsonghong.com/chan-ga-goi-uc018
 
 [flexhouse.vn]
 match = -17.9%%
