--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-19 04:27:13
+lastsearch = 2024-07-19 04:49:26
 
 [tiki.vn]
 match = -138.9%%
@@ -32,19 +32,19 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -144.4%%
-title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 713 - CHÍNH HÃNG ...
-url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-713-chinh-hang-cao-cap
+match = -105.6%%
+title = Bộ Ga (Drap) Nệm Cotton Solid Edena Mẫu 358
+url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-solid-edena-mau-358-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -66.7%%
-title = Bộ ga chun Cotton chống thấm màu xám đậm
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xam-dam.html
+match = -77.8%%
+title = Bộ ga chun Cotton chống thấm màu xanh ngọc
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [foreverbedding.net]
-match = -61.1%%
-title = Bộ ga phủ Melody M214 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-melody-m214
+match = -66.7%%
+title = Bộ ga phủ Passion A114 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-passion-a114
 
 [aeoneshop.com]
 match = -105.6%%
@@ -97,9 +97,9 @@ title = Bộ Phủ L'amour Living LV10
 url = https://demviethome.vn/bo-phu-lamour-living-lv10/
 
 [leflair.com]
-match = -61.1%%
-title = Bộ Drap & Vỏ Chăn Cotton 160x200 (5 Món)...
-url = https://leflair.com/en/shop/delete-bo-drap-vo-chan-cotton-160x200-5-mon-3285
+match = -66.7%%
+title = Bộ Drap & Chăn Chần Cotton 160x200 (5 Món)...
+url = https://leflair.com/en/shop/bo-drap-chan-chan-cotton-160x200-5-mon-15916
 
 [ninhouse.vn]
 match = -161.1%%
