--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-19 02:32:40
+lastsearch = 2024-07-19 04:52:07
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title =
 url = https://en.wikipedia.org/wiki/MC_Ren
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlflJLsp5&sig=ACfU3U2p05gpeWgUUoI8nAoxGk065P7E9g&hl=en&sa=X&ved=2ahUKEwik9pivobGHAxV5jYkEHd79BrAQ6AF6BAgYEAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsiMXjvXf&sig=ACfU3U12wTY18OBd99L5wqz5_bdqZCx4fg&hl=en&sa=X&ved=2ahUKEwjPte24ybGHAxXrFDQIHZxRDKgQ6AF6BAgZEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
