--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-07-19 02:28:40
+lastsearch = 2024-07-19 04:49:04
 
 [www.everonvn.vn]
 match = 7.4%%
@@ -12,9 +12,9 @@ title = ĐỆM LÒ XO EVERON, KING KOIL
 url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [demxanh.com]
-match = 29.8%%
-title = Đệm lò xo KingKoil Cloud Firm dày 27cm chính hãng
-url = https://demxanh.com/dem-lo-xo-kingkoil-cloud-firm.html
+match = 27.9%%
+title = Đệm lò xo 1m6x2m (160x200cm) giá bao nhiêu?
+url = https://demxanh.com/dem-lo-xo-1m6x2m-160x200cm-gia-bao-nhieu.html
 
 [nemragoi.com]
 match = 37.9%%
@@ -22,8 +22,8 @@ title = Nệm lò xo Kingkoil Cloud Firm
 url = https://nemragoi.com/nem-lo-xo-kingkoil-cloud-firm.html
 
 [everonkorea.com]
-match = 14.9%%
-title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm - Everon Korea
+match = 31.8%%
+title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
 url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [everon.com.vn]
@@ -47,9 +47,9 @@ title = Nệm Everon
 url = https://www.everonqb.com/catalog/category/view/s/n-m-everon/id/2013/
 
 [www.diepxuan.com]
-match = 31.1%%
-title = Điệp Xuân Nệm lò xo Everon Bonnell 200x220x23
-url = https://www.diepxuan.com/nem-lo-xo-everon-bonnell-200x220x23.html
+match = 11.1%%
+title = Nệm Foam Nami 150x190x15 - Điệp Xuân
+url = https://www.diepxuan.com/nem-foam-nami-150x190x15.html
 
 [everon.online]
 match = 31.9%%
