--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-07-19 03:48:33
+lastsearch = 2024-07-19 04:50:49
 
 [www.lazada.vn]
 match = -88.9%%
@@ -17,9 +17,9 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -100.0%%
+title = HỆ THỐNG SIÊU THỊ NỆM HÀNG ĐẦU VIỆT NAM TỔNG ...
+url = https://m.facebook.com/media/set/?vanity=vuanem.vn&set=a.693142637496508
 
 [thegioinem.com]
 match = -105.6%%
@@ -27,9 +27,9 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.facebook.com]
-match = -105.6%%
-title = Người Việt Omaha Nebraska USA | 💥 NEM CUA BỂ ...
-url = https://www.facebook.com/groups/465201877663126/posts/-nem-cua-bể-vuông-siêu-chất-lượng-nhất-định-mọi-người-nên-thử-món-nem-này-của-nh/1586366828879953/
+match = -88.9%%
+title = NEM Fashion - 💥 𝐍𝐄𝐖 𝐘𝐄𝐀𝐑 𝐒𝐀𝐋𝐄 𝟓𝟎%% 💥 𝐓𝐎𝐀̀𝐍 𝐁𝐎̣̂ ...
+url = https://www.facebook.com/nemfashion.official/posts/-𝐍𝐄𝐖-𝐘𝐄𝐀𝐑-𝐒𝐀𝐋𝐄-𝟓𝟎-𝐓𝐎𝐀̀𝐍-𝐁𝐎̣̂-𝐒𝐀̉𝐍-𝐏𝐇𝐀̂̉𝐌-𝐓𝐇𝐔-đ𝐎̂𝐍𝐆với-mong-muốn-mang-tới-một-năm/766864658809567/
 
 [eva.vn]
 match = -150.0%%
