--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-07-19 04:51:56
+lastsearch = 2024-07-19 05:13:22
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -22,14 +22,14 @@ title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
 url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
 
 [foreverbedding.net]
-match = -57.1%%
-title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
+match = -33.3%%
+title = Bộ ga chun Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v16
 
 [changagoidemsonghong.com]
 match = -23.8%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-066
-url = https://changagoidemsonghong.com/chan-ga-goi-bc66
+title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
+url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối everon ES1816
 url = https://everon365.vn/bo-chan-ga-goi-everon-es-1816.html
 
 [shopee.vn]
-match = -47.6%%
-title = ga gối cotton xoa nhung đám cưới hồng mvdv16
-url = https://shopee.vn/search?keyword=ga gối cotton xoa nhung đám cưới hồng mvdv16
+match = -85.7%%
+title = Bộ ga gối chần bông cao cấp ETAMI cotton Hàn Quốc 100 ...
+url = https://shopee.vn/Bộ-ga-gối-chần-bông-cao-cấp-ETAMI-cotton-Hàn-Quốc-100-Hoa-Nhí-Xanh-Ngọc-gồm-1-ga-chần-chun-2-vỏ-gối-đầu-i.530345658.23830480845
 
 [runa.vn]
 match = -4.8%%
