--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-19 03:32:41
+lastsearch = 2024-07-19 05:33:48
 
 [chieutruc.info]
 match = -73.9%%
@@ -22,9 +22,9 @@ title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
 url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
 
 [shopee.vn]
-match = 17.4%%
-title = Chiếu cao bằng Việt Nam 1.2m x 1.95
-url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
+match = -65.2%%
+title = Chiếu trúc Cao Bằng Cao Sơn dòng đối mục loại 1 chính ...
+url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-Cao-Sơn-dòng-đối-mục-loại-1-chính-hãng-KT-160-180-200X220cm-i.334752746.9233812040
 
 [www.lazada.vn]
 match = 21.7%%
