--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-19 00:30:42
+lastsearch = 2024-07-19 05:30:43
 
 [www.youtube.com]
 match = -390.0%%
@@ -18,8 +18,8 @@ url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
 match = -70.0%%
-title = 14 days with you ren
-url = https://www.tumblr.com/tagged/14 days with you ren
+title = ren 14 days with you
+url = https://www.tumblr.com/tagged/ren 14 days with you
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = Mystery Champion REN-14 Compressor Pump
 url = https://www.garagejournal.com/forum/threads/mystery-champion-ren-14-compressor-pump.386871/
 
 [en.wikipedia.org]
-match = -120.0%%
-title = List of acupuncture points
-url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Ren_(philosophy)
 
 [twitter.com]
 match = -430.0%%
@@ -98,8 +98,8 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8733268/
 
 [www.tiktok.com]
 match = 0.0%%
-title = 
-url = https://www.tiktok.com/@helloyinny/video/7326917328644410642
+title = Ren from 14 Days
+url = https://www.tiktok.com/discover/ren-from-14-days
 
 [nordicanglers.com]
 match = -120.0%%
