--- a/images/ruot-goi-ke-long-vu/config.ini
+++ b/images/ruot-goi-ke-long-vu/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ruot-goi-ke-long-vu.html
 lastopen = 2024-06-09 23:56:32
 
 [search]
-lastsearch = 2024-07-19 00:35:53
+lastsearch = 2024-07-19 05:32:50
 
 [hanvico.net.vn]
-match = -42.1%%
-title = Ruột gối lông vũ cao cấp 30x50 - Hanvico
-url = https://hanvico.net.vn/products/ruot-goi-long-vu-cao-cap-30x50
+match = -10.5%%
+title = Ruột gối lông vũ cao cấp - Hanvico
+url = https://hanvico.net.vn/collections/ruot-goi-long-vu-cao-cap
 
 [demvip.vn]
 match = 10.5%%
-title = Ruột gối lông vũ cao cấp 45*65
-url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-1
+title = Ruột gối lông vũ cao cấp 50*70
+url = https://demvip.vn/products/ruot-goi-long-vu-cao-cap-50-70
 
 [antbedding.com]
 match = 78.9%%
