--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-19 01:44:26
+lastsearch = 2024-07-19 05:35:54
 
 [demxanh.com]
-match = -45.5%%
-title = Thanh lý thảm trải giường lông cừu giá cực rẻ
+match = -27.3%%
+title = Thảm trải giường lông cừu TLC 07 - Đệm Xanh
 url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
 
 [demre.com.vn]
