CI images update

--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-19 05:37:53
+lastsearch = 2024-07-19 05:51:39
 
 [chieutruc.info]
 match = -60.0%%
@@ -32,9 +32,9 @@ title = "Trùm Gọi Vốn” Ở Cao Bằng Lừa Đảo Hơn 18 Tỷ Đồng |
 url = https://www.youtube.com/watch?v=NN5iWnFFa6Y
 
 [chieutrucsaigon.com]
-match = 44.0%%
-title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
+match = -4.0%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [hanggiadunghatinh.com]
 match = 40.0%%
@@ -165,4 +165,9 @@ url = https://znews.vn/xe-con-no-lop-lao-vao-lan-khan-cap-dam-oto-khac-o-cao-toc
 match = 42.1%%
 title = Chiếu Trúc Cao Bằng
 url = https://chieutruccaobang.com/
+
+[h5.lazada.vn]
+match = -36.0%%
+title = Chiếu Tre Trúc Tăm Vân Gỗ Tây Bắc Cao Bằng Mát Lạnh ...
+url = https://h5.lazada.vn/products/chieu-tre-truc-tam-van-go-tay-bac-cao-bang-mat-lanh-mat-sau-lot-lua-cao-cap-gap-doi-duoc-cho-mua-he-mat-ruoi-du-kich-thuoc-du-size-i1908079923.html
 
