--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-07-19 02:15:50
+lastsearch = 2024-07-19 05:48:40
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -22,9 +22,9 @@ title = notice on public participation & accessibility
 url = https://www.southpasadenaca.gov/files/assets/public/v/1/police/documents/agenda-packet-combined-092.pdf
 
 [en.wikipedia.org]
-match = -72.7%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = 8.7%%
+title = 1972 in the Vietnam War
+url = https://en.wikipedia.org/wiki/1972_in_the_Vietnam_War
 
 [www.facebook.com]
 match = -11.8%%
@@ -127,9 +127,9 @@ title = @Jacquemus has just opened their pop up store in Seoul ...
 url = https://www.tiktok.com/@culted/video/7292084447212571937?lang=en
 
 [30rates.com]
-match = -43.5%%
-title = USD TO KRW TODAY AND FORECAST TOMORROW, ...
-url = https://30rates.com/usd-to-krw-today-forecast-dollar-to-won
+match = -47.8%%
+title = NEM PRICE PREDICTION TOMORROW, WEEK AND ...
+url = https://30rates.com/nem-price-prediction-tomorrow-week-month-xem-forecast
 
 [www.google.com]
 match = 0.0%%
@@ -422,9 +422,9 @@ title = Investor relations - PCH (EN) - ProCredit Holding
 url = https://www.procredit-holding.com/investor-relations/
 
 [en.yna.co.kr]
-match = -82.6%%
-title = 122 ships affected by suspected N. Korean GPS jamming
-url = https://en.yna.co.kr/view/AEN20120504005000315
+match = -87.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [www.usmcu.edu]
 match = -104.3%%
