--- a/images/tham-ghe-da-dai/config.ini
+++ b/images/tham-ghe-da-dai/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ghe-da-dai.html
 lastopen = 2024-06-07 00:36:57
 
 [search]
-lastsearch = 2024-07-19 00:46:41
+lastsearch = 2024-07-19 05:48:58
 
 [shopee.vn]
-match = -146.7%%
-title = bộ thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=bộ thảm trải ghế
+match = -126.7%%
+title = thảm trải ghế giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm trải ghế
 
 [ghedagiago.com]
 match = -100.0%%
