--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-19 04:13:52
+lastsearch = 2024-07-19 05:48:29
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -309.1%%
-title = Ghế xoay da trưởng phòng - SG903 - Nội thất Hòa Phát
-url = https://noithathoaphat.com/ghe-da-truong-phong-sg903
+match = -290.9%%
+title = Ghế da lãnh đạo SG936 | Ghế xoay văn phòng Hòa Phát
+url = https://noithathoaphat.com/ghe-da-lanh-dao-sg936
 
 [dandoxe.com]
 match = -154.5%%
