--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-19 01:48:52
+lastsearch = 2024-07-19 05:49:31
 
 [www.walmart.com]
 match = -162.5%%
@@ -12,13 +12,13 @@ title = Zury Natural Dream Multi Yaky 18" 20" 22", SOM RT BURG
 url = https://www.walmart.com/ip/Zury-Natural-Dream-Multi-Yaky-18-20-22-SOM-RT-BURG/652131534
 
 [www.tiktok.com]
-match = -75.0%%
-title = As Warm As Fire Final Episode Ending
-url = https://www.tiktok.com/discover/as-warm-as-fire-final-episode-ending
+match = -25.0%%
+title = Simple Xiangling Build
+url = https://www.tiktok.com/discover/simple-xiangling-build
 
 [www.diepxuan.com]
-match = -93.8%%
-title = Nệm bông - Chăn ga gối đệm Điệp Xuân
+match = -150.0%%
+title = Điệp Xuân Nệm bông - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong.html?p=2
 
 [digitalmaine.com]
