CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-19 04:26:09
+lastsearch = 2024-07-19 06:15:40
 
 [hoa18.com]
-match = -50.0%%
-title = Về Hoa18
-url = https://hoa18.com/thong-tin/ve-hoa-18
+match = -84.2%%
+title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
+url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -163.2%%
-title = Mộc Hương ta hoa vàng còn đáng chơi khi giá trị nó không ...
-url = https://www.youtube.com/watch?v=kOeDP1xRFpk
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [kallos.co]
 match = -105.3%%
@@ -157,9 +157,9 @@ title = Soái Ca Comic – Truyện Tranh Online
 url = https://soaicacomic.top/
 
 [trithucvn.co]
-match = -163.2%%
-title = Tìm ra hang động trên Mặt Trăng, có thể làm nơi trú ngụ ...
-url = https://trithucvn.co/khoa-hoc/tim-ra-hang-dong-tren-mat-trang-co-the-lam-noi-tru-ngu-cho-phi-hanh-gia.html
+match = -136.8%%
+title = Khảo sát: Ông Trump dẫn trước Tổng thống Biden trên ...
+url = https://trithucvn.co/the-gioi/khao-sat-ong-trump-dan-truoc-tong-thong-biden-tren-toan-quoc.html
 
 [bptv.vn]
 match = -57.9%%
