--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-19 03:13:18
+lastsearch = 2024-07-19 06:13:13
 
 [everon.online]
 match = -7.4%%
@@ -12,8 +12,8 @@ title = Bộ Chăn Ga Gối Everon SR01 Chính Hãng
 url = https://everon.online/products/bo-everon-sr01
 
 [everonvn.com.vn]
-match = -59.3%%
-title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) ...
+match = -74.1%%
+title = Bộ Chăn Ga Everon Epm-21071 chất liệu Gỗ Sồi (Modal) mẫu ...
 url = https://everonvn.com.vn/everon/2130/bo-everon-epm-21071
 
 [tongdailyeveron.com.vn]
@@ -28,18 +28,18 @@ url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
 match = 18.5%%
-title = Bộ chăn ga gối Everon EPC-21053
-url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
+title = Bộ Chăn ga gối Everon EPM-21067
+url = https://everonhanquoc.vn/everon/12770/bo-chan-ga-goi-everon-epm-21067
 
 [everonhn.com.vn]
-match = 33.3%%
-title = Bộ chăn ga Everon ESB -22020
-url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
+match = 25.9%%
+title = Bộ chăn ga everon EPT -21045
+url = https://everonhn.com.vn/bo-chan-ga-everon-ept-21045
 
 [everon.net.vn]
-match = 15.8%%
-title = Bộ Everon Epm-21060
-url = https://everon.net.vn/everon/2109/bo-everon-epm-21060
+match = -18.5%%
+title = Bộ Everon Epm-21069 - Chăn ga gối đệm Everon
+url = https://everon.net.vn/everon/2132/bo-everon-epm-21069
 
 [sieuthidemhanquoc.com.vn]
 match = 18.5%%
