--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-18 22:20:26
+lastsearch = 2024-07-19 06:20:09
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC TĂM H&T CÂY
 url = https://chieutrucsaigon.com/chieu-truc-tam/
 
 [shopee.vn]
-match = -6.7%%
-title = chiếu trúc tăm hương trúc ht
-url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
+match = -106.7%%
+title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
+url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
 
 [chieutruc.info]
 match = -126.7%%
@@ -22,14 +22,14 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -13.3%%
-title = Bóng tuýp HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/bong-tuyp-htlight
+match = -46.7%%
+title = Đèn mắt ếch chiếu điểm HT 8095 10W
+url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8095-10w
 
 [www.htlightlevel.vn]
-match = -193.3%%
-title = Đèn Rọi Cỏ - Công Ty Sản Xuất Đèn LED Chiếu Sáng HT ...
-url = https://www.htlightlevel.vn/den-roi-co-5w/
+match = -60.0%%
+title = Đèn Pha LED 5054 - HT Max Light
+url = https://www.htlightlevel.vn/den-pha-led-5054-10w/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
@@ -57,9 +57,9 @@ title = HT - Exoticzone
 url = https://hactexoticzone.com/
 
 [www.youtube.com]
-match = -100.0%%
-title = CUỘC TÌNH TRONG CƠN MƯA || ĐAN TRƯỜNG
-url = https://www.youtube.com/watch?v=mS5w1Wa4hRQ
+match = -166.7%%
+title = Một Chiều Thu ♪ THANH LAN Pre75 ♪ Sáng tác: TRẦN ...
+url = https://www.youtube.com/watch?v=ig_wsZpLUdc
 
 [thaibinhseed.com.vn]
 match = -193.3%%
