--- a/images/chieu-gap-dai-loan-14/config.ini
+++ b/images/chieu-gap-dai-loan-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-14.html
 lastopen = 2024-06-09 22:43:30
 
 [search]
-lastsearch = 2024-07-18 21:46:45
+lastsearch = 2024-07-19 06:16:33
 
 [www.diepxuan.com]
 match = 14.3%%
@@ -47,9 +47,9 @@ title = THỦ TỤC XIN CẤP ĐỔI HỘ CHIẾU ĐÀI LOAN
 url = https://www.roc-taiwan.org/vnsgn_vi/post/91.html
 
 [www.facebook.com]
-match = -9.5%%
-title = Xin chào, tôi ở Đài Loan | Kaohsiung
-url = https://www.facebook.com/toiodailoan/?locale=vi_VN
+match = -23.8%%
+title = Raohe Ẩm Thực Đài | Ho Chi Minh City
+url = https://www.facebook.com/RaoheAmThucDai/
 
 [www.tripadvisor.com.vn]
 match = -42.9%%
