--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-19 03:15:14
+lastsearch = 2024-07-19 06:12:41
 
 [scholar.google.com]
 match = -43.8%%
@@ -92,9 +92,9 @@ title = maps/@21.001139,105.847882,17z?hl=vi
 url = https://www.google.com/maps/@21.001139,105.847882,17z?hl=vi
 
 [www.facebook.com]
-match = -175.0%%
-title = Lạc Sâu Bích - TẤT CẢ 8 THÀNH VIÊN STRAY KIDS TÁI ...
-url = https://www.facebook.com/story.php/?story_fbid=807362258186228&id=100067373843814
+match = -106.2%%
+title = Tất cả 8 thành viên Stray Kids (bao gồm ...
+url = https://www.facebook.com/lacsaubich/photos/tất-cả-8-thành-viên-stray-kids-tái-ký-hợp-đồng-với-jypchiều-ngày-187-jyp-vui-mừn/807363144852806/
 
 [www.cgv.vn]
 match = -143.8%%
@@ -117,9 +117,9 @@ title = Tin tức 24h tối 18/7: Mâu thuẫn, em trai bị anh ruột dùng hu
 url = https://www.youtube.com/watch?v=hteDrQdI8UA
 
 [books.google.com]
-match = -218.8%%
-title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
-url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+18&source=bl&ots=aHabBN8fBc&sig=ACfU3U1CcxukrtRHbFsQUbonP1h3VA_MsQ&hl=en&sa=X&ved=2ahUKEwjB_biT8rCHAxXWAHkGHWdnCOkQ6AF6BAghEAM
+match = -175.0%%
+title = Văn hóa, nguyệt san: tập-san nghiên-cứu và phổ-thông
+url = https://books.google.com/books?id=3oclAAAAMAAJ&pg=PA220&lpg=PA220&dq=chieu+lac+soc+18&source=bl&ots=CqzJG2Kp7i&sig=ACfU3U0U7qJqhnrbScOioV4Gw8o6es8xLg&hl=en&sa=X&ved=2ahUKEwitrMC527GHAxUAwBQJHQ_TCVAQ6AF6BAgbEAM
 
 [tuanhiep.com.vn]
 match = -56.2%%
