--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-19 03:27:45
+lastsearch = 2024-07-19 06:16:24
 
 [everonvn.com.vn]
 match = -12.5%%
@@ -17,8 +17,8 @@ title = Tấm trải - Topper
 url = https://everonthaiha.com/nhom-san-pham/309/tam-trai-topper.html
 
 [kbedding.vn]
-match = -91.7%%
-title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên) - K-Bedding
+match = -41.7%%
+title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
 url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
 
 [everon.online]
@@ -27,8 +27,8 @@ title = Topper Everon - Tấm Tăng Tiện Nghi
 url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
-match = 0.0%%
-title = Tấm Trải đa Năng Everon Giá Tốt T06/2024
+match = -37.5%%
+title = Tấm Trải đa Năng Everon Giá Tốt T06/2024 - Lazada
 url = https://www.lazada.vn/tag/tam-trai-da-nang-everon/
 
 [www.everonvn.vn]
