--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-07-19 05:33:01
+lastsearch = 2024-07-19 06:34:00
 
 [phana.com.vn]
 match = -90.9%%
@@ -52,9 +52,9 @@ title = Giường Gấp Nhập Khẩu Nhật Bản OTB-MN
 url = https://hungnamphat.com.vn/giuong-gap-nhap-khau-nhat-ban-otb-mn/
 
 [www.lazada.vn]
-match = -127.3%%
-title = Giường Gỗ 1 Người Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/giuong-go-1-nguoi/
+match = -263.6%%
+title = Giường 1 M 6 Giá Tốt T04/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/giuong-1-m-6/?innerlink=hot_v1
 
 [hoaphatsaigon.com]
 match = -272.7%%
