--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-19 04:46:59
+lastsearch = 2024-07-19 06:32:16
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -17,8 +17,8 @@ title = Đệm bông ép Everhome 2m giá bao nhiêu?
 url = https://demxanh.com/dem-bong-ep-everhome-2m-gia-bao-nhieu.html
 
 [www.ebay.com]
-match = -95.2%%
-title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep ...
+match = -128.6%%
+title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep Fitted ...
 url = https://www.ebay.com/itm/256190021356
 
 [www.quora.com]
@@ -32,9 +32,9 @@ title = Đệm Foam cao cấp Everhome - SieuthidemOnline.vn
 url = https://sieuthidemonline.vn/dem-foam-cao-cap-everhome/
 
 [thegioidemviet.vn]
-match = 14.3%%
-title = Nệm Cao Su Bông Kim Cương
-url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
+match = -119.0%%
+title = [New] Bảng Giá nệm cao su Kim Cương - Sale Tháng 3, 4 ...
+url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 
 [www.diepxuan.com]
 match = 9.5%%
@@ -110,4 +110,14 @@ url = https://demeverhome.com/
 match = -66.7%%
 title = {isopb} Paulo coelho interview nederlands
 url = https://www.delta-xray.net/redir.php?URL=https://xn--j1agbcagmi.xn--p1ai/63589145ttfe43a
+
+[m.facebook.com]
+match = -95.2%%
+title = Chợ Thượng Thanh - Long Biên | 📣📣📣giới thiệu đến anh
+url = https://m.facebook.com/groups/3970659769709186/posts/7542364445872016/
+
+[hanoi.baohiemxahoi.gov.vn]
+match = -23.8%%
+title = DS No gui Cong BHXH T7.2022.xlsx
+url = https://hanoi.baohiemxahoi.gov.vn/content/tintuc/Lists/News/Attachments/31604/DS No gui Cong BHXH T7.2022.pdf
 
