--- a/images/tham-giuong-loai-2-12/config.ini
+++ b/images/tham-giuong-loai-2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-12.html
 lastopen = 2024-06-17 22:30:02
 
 [search]
-lastsearch = 2024-07-19 06:18:42
+lastsearch = 2024-07-19 06:34:31
 
 [shopee.vn]
 match = -90.5%%
@@ -27,9 +27,9 @@ title = Thảm trải sàn phòng ngủ chính hãng, giá tốt
 url = https://flexhouse.vn/tham-trai-san-phong-ngu
 
 [ru9.vn]
-match = -81.0%%
-title = Cách Tính Diện Tích, Kích Thước Các Loại Giường Ngủ
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+match = -104.8%%
+title = Nệm mỏng trải sàn, tấm trải giường gấp gọn giá tốt tháng 7
+url = https://ru9.vn/blogs/magazine/nem-trai-san
 
 [www.sendo.vn]
 match = -76.2%%
