--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-19 02:44:06
+lastsearch = 2024-07-19 06:28:34
 
 [chanrathanhthuy.com]
-match = 9.7%%
-title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
+match = -6.5%%
+title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
+url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = -3.2%%
-title = Bộ sưu tập chăn ga gối cưới Singapore được săn lùng ...
-url = https://demxanh.com/bo-suu-tap-chan-ga-goi-cuoi-singapore-duoc-san-lung-nam-2020.html
+match = 63.3%%
+title = Bộ chăn ga gối lụa 6 món L6M18
+url = https://demxanh.com/bo-chan-ga-goi-lua-6-mon-l6m18.html
 
 [songhongonline.vn]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối SH_UC24 107
 url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-107
 
 [changagoidemsonghong.com]
-match = 38.7%%
-title = Bộ chăn ga gối Walt Disney mã mầu YC22012
-url = https://changagoidemsonghong.com/chan-ga-goi-yc22012
+match = -29.0%%
+title = Chăn ga gối Sông Hồng dòng Home mã S17-05 - Chất Tencel ...
+url = https://changagoidemsonghong.com/chan-ga-goi-home-s17-05
 
 [foreverbedding.net]
 match = -3.2%%
