--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-19 06:20:09
+lastsearch = 2024-07-19 06:33:23
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -12,9 +12,9 @@ title = CHIẾU TRÚC TĂM H&T CÂY
 url = https://chieutrucsaigon.com/chieu-truc-tam/
 
 [shopee.vn]
-match = -106.7%%
-title = chiếu tăm việt nam cao cấp kháng khuẩn H.T
-url = https://shopee.vn/chiếu-tăm-việt-nam-cao-cấp-kháng-khuẩn-H.T-i.68883759.1934498848
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [chieutruc.info]
 match = -126.7%%
@@ -27,9 +27,9 @@ title = Đèn mắt ếch chiếu điểm HT 8095 10W
 url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8095-10w
 
 [www.htlightlevel.vn]
-match = -60.0%%
-title = Đèn Pha LED 5054 - HT Max Light
-url = https://www.htlightlevel.vn/den-pha-led-5054-10w/
+match = -120.0%%
+title = Đèn Rọi Ray 8019 Tay Trắng - HT Max Light
+url = https://www.htlightlevel.vn/den-roi-ray-8019-10w-tay-trang/
 
 [www.dienotobinhdinh.com]
 match = 15.4%%
@@ -37,9 +37,9 @@ title = HT Chiếu Sáng
 url = https://www.dienotobinhdinh.com/ht-chieu-sang/
 
 [www.facebook.com]
-match = -113.3%%
-title = Trung tâm thiết bị chiếu sáng - HT Lighting
-url = https://www.facebook.com/trungtamthietbichieusanghtlighting/
+match = -80.0%%
+title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
+url = https://www.facebook.com/chieutructot/?locale=vi_VN
 
 [rangdong.com.vn]
 match = 6.7%%
