--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-07-19 04:27:45
+lastsearch = 2024-07-19 06:31:54
 
 [www.lazada.vn]
 match = -60.9%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx
 [www.facebook.com]
 match = 52.2%%
 title = Chiếu Nhựa Thái Bình | Thanh Hóa
-url = https://www.facebook.com/chieunhuathaibinh/?locale=hr_HR
+url = https://www.facebook.com/chieunhuathaibinh/
 
 [www.sendo.vn]
 match = 26.1%%
@@ -22,9 +22,9 @@ title = chiếu nhựa thái bình 1m8 x2m - chieu1m8
 url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m8-x2m-43900792.html
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
+match = 4.3%%
+title = Chiếu nhựa (quê hương thái bình)kt 1m6 và 1m8
+url = https://shopee.vn/Chiếu-nhựa-(quê-hương-thái-bình)kt-1m6-và-1m8-i.143185988.9645236178
 
 [trangvangvietnam.com]
 match = 21.7%%
