--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-07-19 05:46:37
+lastsearch = 2024-07-19 06:33:14
 
 [www.tui.co.uk]
 match = -33.3%%
@@ -147,9 +147,9 @@ title = German tour giant TUI profits from FTI bankrupcy
 url = https://uk.finance.yahoo.com/news/german-tour-giant-tui-profits-100635222.html
 
 [www.reuters.com]
-match = -316.7%%
-title = TUI Travel sees strong 2014 as customers spend more on ...
-url = https://www.reuters.com/article/world/tui-travel-sees-strong-2014-as-customers-spend-more-on-foreign-holidays-idUSBRE9B90FS/
+match = -325.0%%
+title = Tour giant TUI expects bright summer despite higher prices
+url = https://www.reuters.com/business/retail-consumer/tui-posts-less-than-forecast-q2-loss-winter-bookings-rise-2024-05-15/
 
 [www.mybaggage.com]
 match = -116.7%%
