CI images update

--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-19 05:35:54
+lastsearch = 2024-07-19 06:46:02
 
 [demxanh.com]
 match = -27.3%%
@@ -73,8 +73,8 @@ url = https://shopee.vn/Thảm-lông-trải-sàn-lót-sàn-phòng-khách-trải-
 
 [www.kymdan.com]
 match = -18.2%%
-title = Nệm (mattress) Kymdan Deluxe
-url = https://www.kymdan.com/san-pham/nem-kymdan-deluxe
+title = Nệm (mattress) Kymdan Massage
+url = https://www.kymdan.com/san-pham/nem-kymdan-massage
 
 [noithatkenli.vn]
 match = -27.3%%
