--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-19 06:20:42
+lastsearch = 2024-07-19 06:44:53
 
 [www.lazada.vn]
-match = -88.9%%
-title = Nệm Siêu Nhẹ Giá Tốt T03/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+match = -61.1%%
+title = Orangesky Cần Câu Cá Biển Yuantou ...
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -11.1%%
-title = NEM Fashion added a new photo.
-url = https://www.facebook.com/photo.php?fbid=778686120960754&id=100064581196454&set=a.651941746968526
+match = -27.8%%
+title = Siêu Thị Nệm | Ho Chi Minh City
+url = https://www.facebook.com/sieuthinem/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = 23.5%%
+title = Bảng Giá Nệm 2024
+url = https://thegioinem.com/bang-gia-nem
 
 [garan.vn]
 match = -166.7%%
