CI images update

--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-19 05:52:10
+lastsearch = 2024-07-19 09:09:27
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -100.0%%
-title = YouTube
-url = https://www.youtube.com/watch?v=Bbq9KGIL3VA
+match = -250.0%%
+title = Low-budget GREEN SCREEN at home | What gives the best ...
+url = https://www.youtube.com/watch?v=axwpepx1FTw
 
 [www.reddit.com]
 match = -64.3%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -64.3%%
-title = I am Married to a U.S. Citizen
-url = https://www.uscis.gov/citizenship/learn-about-citizenship/citizenship-and-naturalization/i-am-married-to-a-us-citizen
+match = -7.1%%
+title = Explore my Options
+url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
 match = -21.4%%
@@ -415,4 +415,9 @@ url = https://www.stellarinfo.co.in/blog/video-dxgkrnl-fatal-error-in-windows-10
 match = -242.9%%
 title = iPad Gen 10 10.9 inch Wifi 64GB | Giá rẻ 07/2024, góp 0%%
 url = https://cellphones.com.vn/ipad-10-9-inch-2022.html
+
+[www.bluelagoon.com]
+match = -21.4%%
+title = Blue Lagoon Iceland
+url = https://www.bluelagoon.com/
 
