--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-19 03:31:25
+lastsearch = 2024-07-19 09:07:02
 
 [everon.com.vn]
-match = 11.1%%
-title = Bộ Chăn Ga Everon EPM 22070
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22070/
+match = 14.8%%
+title = Bộ Chăn Ga Everon EPM 22063
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
 match = -5.0%%
@@ -23,8 +23,8 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-22070 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22070.html
+title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 
 [demxanh.com]
 match = 30.6%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 25.7%%
-title = BỘ CHĂN GA GỐI HOA HẸN ƯỚC EPC23045
-url = https://www.everonvni.vn/bo-chan-ga-goi-hoa-hen-uoc-epc23045/
+match = 27.0%%
+title = BỘ CHĂN GA GỐI DẢI MỘNG MƠ - EPM24065
+url = https://www.everonvni.vn/bo-chan-ga-goi-dai-mong-mo-epm24065/
 
 [everonhanquoc.vn]
 match = 19.4%%
@@ -62,8 +62,8 @@ title = vỏ chăn everon giá tốt Tháng 6, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ chăn everon
 
 [m.facebook.com]
-match = -2.5%%
-title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Chính Hãng Số 1 ...
+match = -10.0%%
+title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Chính Hãng Số 1 Tân ...
 url = https://m.facebook.com/story.php/?story_fbid=430777606143789&id=100076346602187
 
 [sieuthidemhanquoc.com.vn]
@@ -90,4 +90,9 @@ url = https://thegioinem.com/chan-ga-goi-everon-epm22063.html
 match = 12.5%%
 title = Amazon.com: Customer Questions & Answers
 url = https://www.amazon.com/ask/questions/Tx17B40SBF555M/?
+
+[everonvietnam.com]
+match = 14.8%%
+title = Bộ Chăn Ga Everon EPM 22063
+url = https://everonvietnam.com/bo-chan-ga-everon-epm-22063-2/
 
