--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-19 06:17:36
+lastsearch = 2024-07-19 09:05:55
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -23,8 +23,8 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8994859/
 
 [thuvienphapluat.vn]
 match = -82.6%%
-title = Nghị quyết 04/2022/NQ-HĐND nội dung mức chi tổ chức ...
-url = https://thuvienphapluat.vn/van-ban/Tai-chinh-nha-nuoc/Nghi-quyet-04-2022-NQ-HDND-noi-dung-muc-chi-to-chuc-ky-thi-cuoc-thi-giao-duc-Thai-Binh-513755.aspx
+title = Chỉ thị 10/CT-UBND 2021 chấn chỉnh tăng cường quản lý ...
+url = https://thuvienphapluat.vn/van-ban/Bat-dong-san/Chi-thi-10-CT-UBND-2021-chan-chinh-tang-cuong-quan-ly-nha-nuoc-ve-dat-dai-tinh-Thai-Binh-483501.aspx
 
 [sotuphap.thaibinh.gov.vn]
 match = 17.4%%
