--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-07-19 05:38:04
+lastsearch = 2024-07-19 09:05:32
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = chiếu trúc hạt vàng cước đỏ thái lan đủ kích cỡ
 url = https://shopee.vn/chiếu-trúc-hạt-vàng-cước-đỏ-thái-lan-đủ-kích-cỡ-i.194586860.3058965326
 
 [demxanh.com]
-match = -81.0%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = -28.6%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [www.lazada.vn]
 match = -85.7%%
