--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-19 05:46:15
+lastsearch = 2024-07-19 09:07:13
 
 [www.zillow.com]
 match = -69.2%%
@@ -32,9 +32,9 @@ title = Georgia Registry of Immunization Transactions and Services
 url = https://www.grits.state.ga.us/
 
 [www.georgianicols.com]
-match = -176.9%%
-title = Daily Horoscope for Thursday, July 18, 2024
-url = https://www.georgianicols.com/daily/
+match = -69.2%%
+title = Georgia Nicols | Georgia Nicols
+url = https://www.georgianicols.com/
 
 [mepublic.tarrantcounty.com]
 match = -100.0%%
