CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-19 09:05:55
+lastsearch = 2024-07-19 09:48:48
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -47,9 +47,9 @@ title = ESL TEACHER : Changing School without leaving Vietnam
 url = https://www.expat.com/forum/viewtopic.php?id=994131
 
 [en.wikipedia.org]
-match = 17.4%%
-title = List of cities in Vietnam
-url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
+match = 0.0%%
+title = Vietnamese language
+url = https://en.wikipedia.org/wiki/Vietnamese_language
 
 [books.google.com]
 match = -139.1%%
@@ -345,4 +345,9 @@ url = https://www.hastingstribune.com/vietfood-beverage---propack-vietnam-2024--
 match = -8.7%%
 title = Thai Binh 27/11/2008 10:39:00 338
 url = https://mof.gov.vn/webcenter/portal/btcen/pages_r/l/newsdetails?dDocName=?dDocName=BTC074914&dID=98692
+
+[wise.com]
+match = -95.7%%
+title = 10 Thai bahts to US dollars Exchange Rate. Convert THB ...
+url = https://wise.com/us/currency-converter/thb-to-usd-rate?amount=10
 
