--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-19 02:31:50
+lastsearch = 2024-07-19 09:45:14
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -225,4 +225,9 @@ url = https://www.qcyc.ca/?q=node/109&height=730&scroll=auto&url=https://xn--b1a
 match = -17.6%%
 title = Tin tức & Sự kiện
 url = http://ansinh.com.vn/News.aspx?NewsID=584&CatID=1&TypeID=1
+
+[www.most.gov.vn]
+match = -53.6%%
+title = Thông tin về kết quả thực hiện nhiệm vụ cấp quốc gia ...
+url = https://www.most.gov.vn/vn/tin-tuc/21076/thong-tin-ve-ket-qua-thuc-hien-nhiem-vu-cap-quoc-gia--nghien-cuu-phat-trien-cay-dia-hoang-rehmannia-glutinosa-theo-huong-dan-gacp-.aspx
 
