--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-19 09:08:16
+lastsearch = 2024-07-19 09:52:59
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -41.7%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa có gối 15
 url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 
 [demxanh.com]
-match = -25.0%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 29.2%%
+title = Chiếu điều hòa mây viền lụa loại đẹp
+url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
 
 [goni.vn]
 match = 4.2%%
@@ -32,9 +32,9 @@ title = Chiếu mát, chiếu điều hòa cao cấp Luxury Home
 url = https://demluxury.com.vn/san-pham/chieu-mat-chieu-dieu-hoa-cao-cap-luxury-home/
 
 [kyoryo.vn]
-match = 12.5%%
-title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
-url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
+match = -58.3%%
+title = Top 3 loại chiếu điều hòa cao cấp nhất thị trường - Kyoryo
+url = https://kyoryo.vn/tin-tuc/top-3-loai-chieu-dieu-hoa-cao-cap-nhat-thi-truong-.html
 
 [sieuthidem.vn]
 match = 50.0%%
