--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-19 09:07:45
+lastsearch = 2024-07-19 09:50:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,8 +12,8 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
+match = 0.0%%
+title = PHOTOTIMEVietnam
 url = https://www.facebook.com/phototimevn/
 
 [banhang.shopee.vn]
