--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-19 05:12:35
+lastsearch = 2024-07-19 09:45:45
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -510,4 +510,9 @@ url = https://congan.com.vn/giao-thong-24h/tren-duong-di-hoc-ve-nam-sinh-nga-vao
 match = -106.2%%
 title = Cảnh nóng thô tục nhất trong phim Hàn Quốc
 url = https://2sao.vn/canh-nong-tho-tuc-nhat-trong-phim-han-quoc-n-386994.html
+
+[www.nguoi-viet.com]
+match = -181.2%%
+title = Lon nước ngọt phát nổ do nắng nóng, chiêu đãi viên ...
+url = https://www.nguoi-viet.com/hoa-ky/lon-nuoc-ngot-phat-no-do-nang-nong-chieu-dai-vien-southwest-airlines-bi-dut-tay/
 
