--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-18 06:44:38
+lastsearch = 2024-07-19 09:51:16
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = 0.0%%
-title = Green Book (2018)
-url = https://www.imdb.com/title/tt6966692/
+match = -100.0%%
+title = Blue Eye Samurai (TV Series 2023)
+url = https://www.imdb.com/title/tt13309742/
 
 [www.etsy.com]
 match = 35.7%%
@@ -132,9 +132,9 @@ title = Buy Blue Man Group Las Vegas Tickets
 url = https://www.blueman.com/las-vegas/buy-tickets
 
 [www.facebook.com]
-match = 0.0%%
-title = Pickleball Forum
-url = https://www.facebook.com/groups/1340630926008388/
+match = -264.3%%
+title = Duy Long - Chàng trai xanh lá quyết theo đuổi nữ chính từ ...
+url = https://www.facebook.com/NguoiAyLaAi.VieChannel/videos/duy-long-chàng-trai-xanh-lá-quyết-theo-đuổi-nữ-chính-từ-show-ra-đời-thật-người-ấ/425027899585078/
 
 [mail.google.com]
 match = -14.3%%
