--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-19 06:32:16
+lastsearch = 2024-07-19 09:48:25
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -17,9 +17,9 @@ title = Đệm bông ép Everhome 2m giá bao nhiêu?
 url = https://demxanh.com/dem-bong-ep-everhome-2m-gia-bao-nhieu.html
 
 [www.ebay.com]
-match = -128.6%%
-title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep Fitted ...
-url = https://www.ebay.com/itm/256190021356
+match = -100.0%%
+title = Everhome 700 TC 100%% Egyptian Cotton Deep Fitted ...
+url = https://www.ebay.com/itm/256326842231
 
 [www.quora.com]
 match = -123.8%%
@@ -27,9 +27,9 @@ title = Should an Abugida script be created for Vietnamese? ...
 url = https://www.quora.com/Should-an-Abugida-script-be-created-for-Vietnamese-An-abugida-script-in-my-opinion-will-look-cool-and-can-also-be-the-first-ever-home-grown-script-instead-of-the-forever-taking-Chinese-characters-or-the-foreign
 
 [sieuthidemonline.vn]
-match = -61.9%%
-title = Đệm Foam cao cấp Everhome - SieuthidemOnline.vn
-url = https://sieuthidemonline.vn/dem-foam-cao-cap-everhome/
+match = -85.7%%
+title = Đệm cao su thiên nhiên cao cấp Lavender Everhome
+url = https://sieuthidemonline.vn/dem-cao-su-lavender/
 
 [thegioidemviet.vn]
 match = -119.0%%
@@ -37,9 +37,9 @@ title = [New] Bảng Giá nệm cao su Kim Cương - Sale Tháng 3, 4 ...
 url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 
 [www.diepxuan.com]
-match = 9.5%%
-title = Nệm everhome TC 180x200x15 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-180x200x15.html
+match = -61.9%%
+title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome.html
 
 [bachhoadem.vn]
 match = 28.6%%
