--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-19 05:13:34
+lastsearch = 2024-07-19 09:48:36
 
 [xoptraisan.info]
-match = 17.6%%
-title = Thảm nỉ ghép Tường Lâm 60×60
-url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-60x60
+match = -147.1%%
+title = Thảm nỉ ghép Tường Lâm cao cấp khổ 40x40cm siêu giảm giá
+url = https://xoptraisan.info/tham-ni-ghep-tuong-lam-40x40
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -67,9 +67,9 @@ title = Thảm nỉ trải sàn ghép miếng thương hiệu Tường Lâm
 url = https://demhong.vn/tham-ni-trai-san-ghep-mieng/
 
 [shopee.vn]
-match = -135.3%%
-title = [Trợ giá] Thảm xốp vân gỗ Cao cấp 1 bộ 6 miếng 60s60cm
-url = https://shopee.vn/product/74195497/1842818990?gsht=tvsIQ01vyExHjKvj
+match = -47.1%%
+title = 1 Tấm THẢM XỐP GHÉP VÂN GỖ 60x60cm/tấm
+url = https://shopee.vn/1-Tấm-THẢM-XỐP-GHÉP-VÂN-GỖ-60x60cm-tấm-i.83850460.1824299401
 
 [thamtraisan.info]
 match = -76.5%%
