--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-07-19 06:12:20
+lastsearch = 2024-07-19 09:47:00
 
 [www.tiktok.com]
 match = 0.0%%
@@ -212,7 +212,12 @@ title = līdzjūtības pantiņi - More - cheaptheatreticket.com
 url = https://cheaptheatreticket.com/blogs/jojnijro-94/
 
 [mechanicaldesign-job.com]
-match = -206.2%%
-title = dior watches women - christian dior watches swiss made ...
-url = https://mechanicaldesign-job.com/products/ahfwgrjm-183//
+match = -287.5%%
+title = distilled malt vinegar vs malt vinegar - More - mechanicaldesign-job ...
+url = https://mechanicaldesign-job.com/blogs/tkzjoeuq-115//
+
+[www.veryberryfrozenyogurt.com]
+match = -262.5%%
+title = tucson rolex - rolex watches tucson az - veryberryfrozenyogurt.com
+url = https://www.veryberryfrozenyogurt.com/blogs/azfychit-1/
 
