CI images update

--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-19 09:45:45
+lastsearch = 2024-07-19 10:16:59
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -82,9 +82,9 @@ title = Turtle Beach USA
 url = https://www.turtlebeach.com/search?q=✅+TK88+✅TK88+Đăng+Ký+Thành+Viên✅✅+Copy_Tk88.co+✅+Nhà+cái+uy+tín+✅++Seopro
 
 [moon.vn]
-match = -206.2%%
-title = Con lắc đơn chiều dài l = 0,5 (m), m = 100 gam dao động ở ...
-url = https://moon.vn/hoi-dap/con-lac-don-chieu-dai-l-05-m-m-100-gam-dao-dong-o-noi-co-g-98-ms2-voi-bien-do-goc-ba-679117
+match = -193.8%%
+title = Một con lắc lò xo dao động điều hòa theo phương thẳng ...
+url = https://moon.vn/hoi-dap/mot-con-lac-lo-xo-dao-dong-dieu-hoa-theo-phuong-thang-dung-chieu-dai-tu-nhien-cua-lo-659716
 
 [djexpress.com.vn]
 match = -68.8%%
@@ -227,9 +227,9 @@ title = Secured Home of cokhidaitienphat.com
 url = https://cokhidaitienphat.com/
 
 [www.quora.com]
-match = -106.2%%
-title = What are some swear words in Vietnamese?
-url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
+match = -206.2%%
+title = Was the Nguyen dynasty similar to the South or North ...
+url = https://www.quora.com/Was-the-Nguyen-dynasty-similar-to-the-South-or-North-Vietnamese-governments
 
 [congan.binhthuan.gov.vn]
 match = -206.2%%
@@ -412,8 +412,8 @@ title = What does 18.7 bore equate to
 url = https://www.trapshooters.com/threads/what-does-18-7-bore-equate-to.84941/
 
 [olm.vn]
-match = -218.8%%
-title = Một mảnh đất hình thang có đáy lớn 27,6m, đáy bé bằng 2/ ...
+match = -212.5%%
+title = Một mảnh đất hình thang có đáy lớn 27,6m, đáy bé bằng 2 ...
 url = https://olm.vn/cau-hoi/mot-manh-dat-hinh-thang-co-day-lon-276m-day-be-bang-23-day-lon-chieu-cao-85m-nguoi-ta-trong-lac-tren-manh-dat-do-cu-1m-vuong-thu-duoc-3kg-lac-c.68946291283
 
 [sovhtt.caobang.gov.vn]
@@ -515,4 +515,14 @@ url = https://2sao.vn/canh-nong-tho-tuc-nhat-trong-phim-han-quoc-n-386994.html
 match = -181.2%%
 title = Lon nước ngọt phát nổ do nắng nóng, chiêu đãi viên ...
 url = https://www.nguoi-viet.com/hoa-ky/lon-nuoc-ngot-phat-no-do-nang-nong-chieu-dai-vien-southwest-airlines-bi-dut-tay/
+
+[vuahanghieu.com]
+match = -187.5%%
+title = 10 mẫu lắc tay vàng 18k đẹp được yêu thích nhất hiện nay
+url = https://vuahanghieu.com/tin-tuc/10-mau-lac-tay-vang-18k-dep-duoc-yeu-thich-nhat-hien-nay
+
+[khoahoc.vietjack.com]
+match = -187.5%%
+title = Một con lắc đơn có chiều dài 45cm với vật nhỏ có khối ...
+url = https://khoahoc.vietjack.com/question/690360/mot-con-lac-don-co-chieu-dai-45cm-voi-vat-nho-co-khoi-luong-102g-mang
 
