--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-19 06:28:34
+lastsearch = 2024-07-19 10:14:32
 
 [chanrathanhthuy.com]
 match = -6.5%%
@@ -12,14 +12,14 @@ title = Tổng hợp những mẫu chăn ga gối đẹp không nên bỏ qua
 url = https://chanrathanhthuy.com/tin-tuc/tong-hop-nhung-mau-chan-ga-goi-dep-khong-nen-bo-qua.html
 
 [demxanh.com]
-match = 63.3%%
-title = Bộ chăn ga gối lụa 6 món L6M18
-url = https://demxanh.com/bo-chan-ga-goi-lua-6-mon-l6m18.html
+match = 25.8%%
+title = Bộ chăn ga gối lụa Singapore luxury 7 món L7M18
+url = https://demxanh.com/bo-chan-ga-goi-lua-singapore-luxury-7-mon-l7m18.html
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UC24 107
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc24-107
+match = 48.0%%
+title = Bộ chăn ga gối SH_H19 069
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-h19-069
 
 [changagoidemsonghong.com]
 match = -29.0%%
