--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-19 09:48:48
+lastsearch = 2024-07-19 10:19:47
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -47,9 +47,9 @@ title = ESL TEACHER : Changing School without leaving Vietnam
 url = https://www.expat.com/forum/viewtopic.php?id=994131
 
 [en.wikipedia.org]
-match = 0.0%%
-title = Vietnamese language
-url = https://en.wikipedia.org/wiki/Vietnamese_language
+match = 17.4%%
+title = List of cities in Vietnam
+url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 
 [books.google.com]
 match = -139.1%%
@@ -350,4 +350,9 @@ url = https://mof.gov.vn/webcenter/portal/btcen/pages_r/l/newsdetails?dDocName=?
 match = -95.7%%
 title = 10 Thai bahts to US dollars Exchange Rate. Convert THB ...
 url = https://wise.com/us/currency-converter/thb-to-usd-rate?amount=10
+
+[m.yelp.com]
+match = -34.8%%
+title = Thai Binh Boston, MA - Last Updated June 2024
+url = https://m.yelp.com/search?find_desc=Thai+Binh&find_loc=Boston,+MA
 
