--- a/images/chieu-lac-soc-10/config.ini
+++ b/images/chieu-lac-soc-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-10.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-19 03:44:46
+lastsearch = 2024-07-19 10:20:51
 
 [www.chieulongdinh.com.vn]
 match = -93.8%%
@@ -285,4 +285,9 @@ url = https://m.nhipcaudautu.vn/tai-chinh/thi-truong-rung-lac-dao-chieu-phut-cuo
 match = -100.0%%
 title = MassHealth Adult Disability Supplement
 url = https://www.mass.gov/doc/masshealth-adult-disability-supplement-vietnamese/download
+
+[viettimes.vn]
+match = -81.2%%
+title = Nữ sinh đạt 3 điểm 10 thi tốt nghiệp
+url = https://viettimes.vn/uoc-mo-gian-di-cua-nu-sinh-vung-cao-dat-3-diem-10-thi-tot-nghiep-post176612.html
 
