--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-19 04:32:06
+lastsearch = 2024-07-19 10:18:20
 
 [demdreamland.vn]
-match = 29.7%%
-title = Đệm Dreamland Chính Hãng Giá Tốt Nhất
-url = https://demdreamland.vn/
+match = 25.6%%
+title = Đệm cao su nhập khẩu Dreamland Natural Latex
+url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 
 [demxanh.com]
 match = 18.6%%
@@ -22,9 +22,9 @@ title = DreamLand
 url = https://www.diepxuan.com/dreamland.html?p=4
 
 [dreamland.vn]
-match = 20.5%%
-title = Đệm cao su Thiên Nhiên Hoàng Gia - 16cm
-url = http://dreamland.vn/Dem-cao-su-Thien-Nhien-Hoang-Gia---16cm-i4417.html
+match = -11.1%%
+title = Đệm cao su Xuất Khẩu - 10cm
+url = http://dreamland.vn/Dem-cao-su-Xuat-Khau---10cm-i4418.html
 
 [demviethome.vn]
 match = 7.0%%
@@ -32,9 +32,9 @@ title = Đệm cao su Kim Cương princess diamond luxury giá rẻ hà ...
 url = https://demviethome.vn/dem-cao-su-kim-cuong-princess-diamond-luxury/
 
 [thegioidemdep.com]
-match = -4.7%%
-title = Bảng Giá & Top 50+ Đệm bông ép Dreamland chính hãng ...
-url = https://thegioidemdep.com/dem-bong-ep-dreamland/
+match = 7.0%%
+title = Mua Nệm cao su kim cương Princess Gold Cao Cấp Sale ...
+url = https://thegioidemdep.com/dem-cao-su-thien-nhien-kim-cuong-xuat-khau-princess-gold/
 
 [chandemsadora.com]
 match = -9.7%%
