--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-19 10:44:20
+lastsearch = 2024-07-19 11:22:52
 
 [shopee.vn]
 match = -8.0%%
@@ -27,9 +27,9 @@ title = Xin chào, tôi ở Đài Loan
 url = https://www.facebook.com/toiodailoan/
 
 [vi.wikipedia.org]
-match = 12.5%%
-title = Lịch sử Đài Loan
-url = https://vi.wikipedia.org/wiki/Lịch_sử_Đài_Loan
+match = -4.0%%
+title = Đài Loan – Wikipedia tiếng Việt
+url = https://vi.wikipedia.org/wiki/Đài_Loan
 
 [www.voatiengviet.com]
 match = -72.0%%
@@ -212,9 +212,9 @@ title = Kết quả sản xuất vụ đông xuân năm 2024
 url = https://www.gso.gov.vn/du-lieu-va-so-lieu-thong-ke/2024/07/ket-qua-san-xuat-vu-dong-xuan-nam-2024/
 
 [znews.vn]
-match = -68.0%%
-title = Một lần đặt chân đến địa điểm quay loạt phim Đài Loan nổi ...
-url = https://znews.vn/mot-lan-dat-chan-den-dia-diem-quay-loat-phim-dai-loan-noi-tieng-post1446961.html
+match = -64.0%%
+title = Trò gắp thú bùng nổ ở Đài Loan giữa lúc kinh tế suy thoái
+url = https://znews.vn/tro-gap-thu-bung-no-o-dai-loan-giua-luc-kinh-te-suy-thoai-post900642.html
 
 [vnexpress.net]
 match = 4.0%%
