--- a/images/chieu-cay-ht-10/config.ini
+++ b/images/chieu-cay-ht-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-10.html
 lastopen = 2024-06-09 23:52:43
 
 [search]
-lastsearch = 2024-07-19 06:33:23
+lastsearch = 2024-07-19 11:21:45
 
 [chieutrucsaigon.com]
 match = 33.3%%
@@ -22,9 +22,9 @@ title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
 url = https://chieutruc.info/chieu-tam-ht/
 
 [www.thietbidiendgp.vn]
-match = -46.7%%
-title = Đèn mắt ếch chiếu điểm HT 8095 10W
-url = https://www.thietbidiendgp.vn/products/den-mat-ech-chieu-diem-ht-8095-10w
+match = -20.0%%
+title = Bóng Bulb HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/hang/htlight/den-chieu-sang/bong-bulb-htlight
 
 [www.htlightlevel.vn]
 match = -120.0%%
