--- a/images/ga-chong-tham-dreamland-200x220/config.ini
+++ b/images/ga-chong-tham-dreamland-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 lastopen = 2024-06-07 00:24:06
 
 [search]
-lastsearch = 2024-07-19 10:37:11
+lastsearch = 2024-07-19 11:22:19
 
 [www.dreamland.vn]
 match = -14.3%%
@@ -27,9 +27,9 @@ title = Chăn Tuyết Điều Hòa
 url = http://dreamland.vn/Chan-Tuyet-Dieu-Hoa-i4421.html
 
 [demxinh.vn]
-match = -29.0%%
-title = Chiếu điều hoà có chống thấm không? Nên sử dụng loại nào
-url = https://demxinh.vn/tin-tuc/chieu-dieu-hoa-co-chong-tham-khong.html
+match = 9.7%%
+title = Chăn Ga Gối Dreamland Chính Hãng Giá Tốt
+url = https://demxinh.vn/chan-ga-goi-dreamland/
 
 [dongahome.vn]
 match = 3.2%%
@@ -52,9 +52,9 @@ title = Ga chống thấm Dreamland 200x220
 url = https://www.diepxuan.com/ga-chong-tham-dreamland-200x220.html
 
 [www.facebook.com]
-match = 6.5%%
-title = Chăn ga Hoàng Hải -Forever BigC Long Biên
-url = https://www.facebook.com/photo.php?fbid=255882516539007&id=100063517804612&set=a.184664406994152&locale=az_AZ
+match = 3.2%%
+title = Chăn Ga Gối Đệm Luxury 81 Minh Khai
+url = https://www.facebook.com/changagoiluxury/?locale=es_LA
 
 [www.chandemsadora.com]
 match = 17.2%%
