--- a/images/nem-sieu-nhe-9f-16/config.ini
+++ b/images/nem-sieu-nhe-9f-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-16.html
 lastopen = 2024-06-10 00:30:12
 
 [search]
-lastsearch = 2024-07-19 06:35:48
+lastsearch = 2024-07-19 11:22:08
 
 [www.instagram.com]
 match = -50.0%%
@@ -22,9 +22,9 @@ title = Nem Nướng | Ho Chi Minh City
 url = https://www.facebook.com/p/Nem-Nướng-100054522756775/
 
 [thegioinem.com]
-match = 17.6%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -111.1%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [www.youtube.com]
 match = -144.4%%
@@ -42,9 +42,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -16.7%%
+title = NEM CUA BỂ VUÔNG SIÊU CHẤT LƯỢNG
+url = https://m.facebook.com/groups/213134222458659/posts/1913588515746546/
 
 [lanchi.vn]
 match = -44.4%%
