--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-18 18:15:47
+lastsearch = 2024-07-19 11:24:13
 
 [www.tui.co.uk]
 match = -153.3%%
@@ -225,4 +225,9 @@ url = https://www.google.com/travel/flights/flights-from-durban.html
 match = -206.7%%
 title = I'm Tui T. Sutherland, author of the Wings of Fire series
 url = https://www.reddit.com/r/WingsOfFire/comments/jj7pi5/im_tui_t_sutherland_author_of_the_wings_of_fire/
+
+[www.seatrade-cruise.com]
+match = -226.7%%
+title = TUI flight to Singapore from Birmingham for Marella's Asia ...
+url = https://www.seatrade-cruise.com/ship-operations/inaugural-tui-passenger-flight-singapore-birmingham-serving-marellas-asia-homeport
 
