--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-07-19 06:44:53
+lastsearch = 2024-07-19 11:37:58
 
 [www.lazada.vn]
 match = -61.1%%
@@ -17,9 +17,9 @@ title = Siêu Thị Nệm | Ho Chi Minh City
 url = https://www.facebook.com/sieuthinem/
 
 [thegioinem.com]
-match = 23.5%%
-title = Bảng Giá Nệm 2024
-url = https://thegioinem.com/bang-gia-nem
+match = -105.6%%
+title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
+url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [garan.vn]
 match = -166.7%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -127.8%%
-title = Nem Nướng Siêu To Khổng Lồ Siêu Ngon #ancungtiktok ...
-url = https://www.tiktok.com/@thenguyen_kitchen/video/7139504048713010458
+match = -72.2%%
+title = Rissa and Quan Break Up Prank in A Car
+url = https://www.tiktok.com/discover/rissa-and-quan-break-up-prank-in-a-car
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -59,7 +59,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe.html
 [m.facebook.com]
 match = 6.7%%
 title = Người Việt Cali
-url = https://m.facebook.com/groups/1330533356979172/
+url = https://m.facebook.com/groups/1330533356979172/?locale=vi_VN
 
 [emartmall.com.vn]
 match = 0.0%%
