--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-19 02:28:17
+lastsearch = 2024-07-19 11:39:28
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -17,9 +17,9 @@ title = Chiếu lác thiên nhiên : 1m6 .1m8
 url = https://shopee.vn/Chiếu-lác-thiên-nhiên-1m6-.1m8-i.154866392.2623269681
 
 [www.youtube.com]
-match = -193.8%%
-title = Một cây Mai Chiếu Thủy đã được chơi 10 năm, vẫn giữ giá ...
-url = https://www.youtube.com/watch?v=nv0EjrLAqh0
+match = -143.8%%
+title = LẶNG LẼ CHIỀU TAN CA ! Ế DÀI CẢNH CHỢ CÔNG NHÂN ...
+url = https://www.youtube.com/watch?v=aMNreu6QNI8
 
 [hawater.com.vn]
 match = -75.0%%
