CI images update

--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-19 09:52:46
+lastsearch = 2024-07-19 12:38:20
 
 [www.galottery.com]
 match = -7.7%%
@@ -430,4 +430,9 @@ url = https://nassaunationalcable.com/blogs/blog/what-is-the-ampacity-of-14-awg-
 match = 0.0%%
 title = 
 url = https://www.northwestregisteredagent.com/llc/georgia/dissolve
+
+[www.kff.org]
+match = -276.9%%
+title = Medicaid Waiver Tracker: Approved and Pending Section ...
+url = https://www.kff.org/medicaid/issue-brief/medicaid-waiver-tracker-approved-and-pending-section-1115-waivers-by-state/
 
