--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-07-19 06:33:03
+lastsearch = 2024-07-19 12:38:09
 
 [www.diepxuan.com]
 match = -125.0%%
@@ -12,9 +12,9 @@ title = Túi Warmdream 140x190x09 - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/tui-warmdream-140x190x09.html
 
 [demxanh.com]
-match = -156.2%%
-title = Đệm bông ép 2mx2m2 (200x220cm) giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html
+match = -181.2%%
+title = Bảng giá Đệm bông ép Dreamland khuyến mãi mới nhất ...
+url = https://demxanh.com/bang-gia-dem-bong-ep-dreamland-2018.html
 
 [m.facebook.com]
 match = 0.0%%
