--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-19 12:13:13
+lastsearch = 2024-07-19 12:32:24
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [dungcuykhoakimminh.com]
-match = -4.8%%
-title = Tìm kiếm từ khóa: Tao
-url = https://dungcuykhoakimminh.com/tag/Tao&trang-21
+match = 0.0%%
+title = Tìm kiếm từ khóa: LED
+url = https://dungcuykhoakimminh.com/tag/LED&trang-9
 
 [mych.vn]
 match = -60.7%%
@@ -108,8 +108,8 @@ url = https://www.24h.com.vn/bong-da/14-nam-rooney-ra-mat-mu-hat-trick-huyen-tho
 
 [www.facebook.com]
 match = -25.0%%
-title = HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG MANDELIC ...
-url = https://www.facebook.com/trustpluscuanam/photos/a.113295247201464/113295160534806/?type=3
+title = Trust+ - HÀNH TRÌNH “PEEL DA” 14 NGÀY BẰNG ...
+url = https://www.facebook.com/Trustplus1304/posts/hành-trình-peel-da-14-ngày-bằng-mandelic-acid-chỉ-180k-của-mình-thật-ra-hôm-nay-/1992134787558676/
 
 [trongdoitam1.mysapo.net]
 match = 14.3%%
