--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-19 11:17:49
+lastsearch = 2024-07-19 12:36:29
 
 [www.diepxuan.com]
 match = 0.0%%
@@ -70,4 +70,9 @@ url = https://www.mountainproject.com/forum/topic/109609408/left-6-and-8-bd-nuts
 match = -42.9%%
 title = Christine Marie Chen | I discovered some new # ...
 url = https://www.instagram.com/p/C2lny5or_NA/
+
+[diepxuan.com]
+match = -21.1%%
+title = Điệp Xuân Trang Chủ
+url = https://diepxuan.com/
 
