--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-07-19 04:27:24
+lastsearch = 2024-07-19 12:37:22
 
 [burningman.org]
-match = -60.0%%
-title = The 10 Principles of Burning Man
+match = 0.0%%
+title = 
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -940,4 +940,14 @@ url = https://www.mercer.edu/
 match = 6.7%%
 title = Valencia College
 url = https://valenciacollege.edu/
+
+[www.ixl.com]
+match = -246.7%%
+title = IXL | Math, Language Arts, Science, Social Studies, and Spanish
+url = https://www.ixl.com/
+
+[lasd.org]
+match = -253.3%%
+title = Los Angeles County Sheriff's Department | A Tradition of Service
+url = https://lasd.org/
 
