--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-19 05:44:48
+lastsearch = 2024-07-19 12:33:05
 
 [www.youtube.com]
 match = -390.0%%
@@ -17,9 +17,9 @@ title = Tung's Acupuncture points 33.13 (Ren shi), 33.14 (Di ...
 url = https://www.sinimed.co.il/en/acupuncture/en-33-13-33-14-33-15/
 
 [www.tumblr.com]
-match = -70.0%%
-title = ren 14 days with you
-url = https://www.tumblr.com/tagged/ren 14 days with you
+match = -40.0%%
+title = Ren NSFW alphabet
+url = https://www.tumblr.com/14dayswithyou/692620485331238912/ren-nsfw-alphabet
 
 [www.garagejournal.com]
 match = -200.0%%
@@ -27,9 +27,9 @@ title = Mystery Champion REN-14 Compressor Pump
 url = https://www.garagejournal.com/forum/threads/mystery-champion-ren-14-compressor-pump.386871/
 
 [en.wikipedia.org]
-match = -120.0%%
-title = List of acupuncture points
-url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Ren_(philosophy)
 
 [twitter.com]
 match = -430.0%%
@@ -132,9 +132,9 @@ title =
 url = https://www.koha.net/en/lemsh/246319/14-vjecari-kinez-adoleshenti-me-i-gjate-ne-bote
 
 [www.reddit.com]
-match = -50.0%%
-title = Ren (C14) : r/ANTM
-url = https://www.reddit.com/r/ANTM/comments/91ajpw/ren_c14/
+match = -340.0%%
+title = Ren's dying in V14 (maybe) : r/PokemonRejuvenation
+url = https://www.reddit.com/r/PokemonRejuvenation/comments/qlg3io/rens_dying_in_v14_maybe/
 
 [www.maciociaonline.com]
 match = -250.0%%
@@ -255,4 +255,9 @@ url = https://www.imdb.com/news/ni64491557/
 match = 0.0%%
 title = 
 url = https://wellbalancedmvmt.com/extraordinary-vessel-du-mai/
+
+[f95zone.to]
+match = -170.0%%
+title = A Man for All [Ep.14] [Venus Waltz]
+url = https://f95zone.to/threads/a-man-for-all-ep-14-venus-waltz.65913/page-92
 
