--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-07-19 10:32:34
+lastsearch = 2024-07-19 12:30:59
 
 [www.mantubung.com]
 match = -100.0%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -111.1%%
-title = Màn mùng chụp tư bung gấp gọn tiện dụng chống muỗi ...
-url = https://shopee.vn/Màn-mùng-chụp-tư-bung-gấp-gọn-tiện-dụng-chống-muỗi-cho-bé-sơ-sinh-bé-lớn-trẻ-em-hiệu-quả-cao-cấp-i.229089803.10442621837
+match = -100.0%%
+title = màn chụp cho bé giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp cho bé
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -47,9 +47,9 @@ title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
 url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
 
 [mungmocmien.com]
-match = -155.6%%
-title = Mùng ngủ cao cấp Mộc Miên ( cung cấp mùng chụp tự bung ...
-url = https://mungmocmien.com/
+match = -111.1%%
+title = Mùng ngủ em bé ( mùng chụp em bé, mùng nôi em bé...)
+url = https://mungmocmien.com/collections/mung-chup-em-be
 
 [tiki.vn]
 match = -11.1%%
@@ -62,9 +62,9 @@ title = Mùng Tự Bung Cho Bé 70cm x 90Cm
 url = https://mungchup.com/mung-thuyen-tu-bung-cho-be-67008.html
 
 [munghoangphat.com]
-match = -88.9%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -44.4%%
+title = Mùng chụp tự bung trẻ em cao cấp HOÀNG PHÁT
+url = https://munghoangphat.com/mung-chup-tu-bung-tre-em-cao-cap.html
 
 [ichikobaby.com]
 match = -88.9%%
