CI images update

--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-19 05:50:02
+lastsearch = 2024-07-19 12:50:37
 
 [demxanh.com]
 match = 38.2%%
@@ -115,4 +115,9 @@ url = https://www.nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
 match = 58.8%%
 title = Chiếu điều Hòa Cao Su Non Là Gì ...
 url = https://khonemtonghop.com/chieu-dieu-hoa-cao-su-non-la-gi/
+
+[olbedding.com]
+match = 11.8%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 4 - Nệm Uy Tín
+url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-4/
 
