--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-19 12:13:22
+lastsearch = 2024-07-19 12:45:38
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -227,9 +227,9 @@ title = Secured Home of cokhidaitienphat.com
 url = https://cokhidaitienphat.com/
 
 [www.quora.com]
-match = -206.2%%
-title = Was the Nguyen dynasty similar to the South or North ...
-url = https://www.quora.com/Was-the-Nguyen-dynasty-similar-to-the-South-or-North-Vietnamese-governments
+match = -106.2%%
+title = What are some swear words in Vietnamese?
+url = https://www.quora.com/What-are-some-swear-words-in-Vietnamese
 
 [congan.binhthuan.gov.vn]
 match = -206.2%%
@@ -422,9 +422,9 @@ title = Báo cáo về việc điều chỉnh cục bộ Đồ án điều chỉ
 url = https://sovhtt.caobang.gov.vn/Default.aspx?sid=1355&pageid=34288&catid=94914&id=858488&catname=quy-hoach-phuong-xa&title=bao-cao-ve-viec-dieu-chinh-cuc-bo-do-an-dieu-chinh-quy-hoach-chung-thi-tran-pac-miau-huyen-bao-l
 
 [baotintuc.vn]
-match = -212.5%%
-title = Lãi suất cho vay mua nhà thấp kỷ lục có đẩy tín dụng bật ...
-url = https://baotintuc.vn/tai-chinh-ngan-hang/lai-suat-cho-vay-mua-nha-thap-ky-luc-co-day-tin-dung-bat-tang-20240714165646877.htm
+match = -206.2%%
+title = Nâng cao tính chuyên nghiệp, hiệu quả, thực tiễn công tác ...
+url = https://baotintuc.vn/thoi-su/nang-cao-tinh-chuyen-nghiep-hieu-qua-sat-thuc-tien-cua-cong-tac-thong-tin-doi-ngoai-20240717175005909.htm
 
 [langsontv.vn]
 match = -56.2%%
@@ -512,9 +512,9 @@ title = Cảnh nóng thô tục nhất trong phim Hàn Quốc
 url = https://2sao.vn/canh-nong-tho-tuc-nhat-trong-phim-han-quoc-n-386994.html
 
 [www.nguoi-viet.com]
-match = -181.2%%
-title = Lon nước ngọt phát nổ do nắng nóng, chiêu đãi viên ...
-url = https://www.nguoi-viet.com/hoa-ky/lon-nuoc-ngot-phat-no-do-nang-nong-chieu-dai-vien-southwest-airlines-bi-dut-tay/
+match = -187.5%%
+title = Elon Musk đòi dời X và SpaceX từ California qua Texas
+url = https://www.nguoi-viet.com/hoa-ky/elon-musk-doi-doi-x-va-spacex-tu-california-qua-texas/
 
 [vuahanghieu.com]
 match = -187.5%%
@@ -525,4 +525,14 @@ url = https://vuahanghieu.com/tin-tuc/10-mau-lac-tay-vang-18k-dep-duoc-yeu-thich
 match = -187.5%%
 title = Một con lắc đơn có chiều dài 45cm với vật nhỏ có khối ...
 url = https://khoahoc.vietjack.com/question/690360/mot-con-lac-don-co-chieu-dai-45cm-voi-vat-nho-co-khoi-luong-102g-mang
+
+[baocaobang.vn]
+match = -200.0%%
+title = Đại hội đại biểu Hội LHTN Hà Quảng lần thứ VI, nhiệm kỳ ...
+url = https://baocaobang.vn/dai-hoi-dai-bieu-hoi-lhtn-ha-quang-lan-thu-vi-nhiem-ky-2024-2029-3170752.html
+
+[quatest3.com.vn]
+match = -44.4%%
+title = QUATEST 3
+url = https://quatest3.com.vn/
 
