--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-07-19 12:39:29
+lastsearch = 2024-07-19 12:49:51
 
 [xoptraisan.info]
 match = -147.1%%
@@ -22,9 +22,9 @@ title = Lưu trữ 60x60cm – THẢM XỐP ÂU LẠC
 url = https://thamaulac.com.vn/danh-muc/tham-ni-ghep/60x60cm
 
 [vatlieulotsan.com]
-match = -23.5%%
-title = Thảm Xốp 50x50cm Mặt Nỉ Hoa Văn
-url = https://vatlieulotsan.com/product/tham-xop-50x50cm-mat-ni-hoa-van/
+match = -76.5%%
+title = Thảm Xốp 60 × 60 Cm Mặt Nỉ Hoa Văn Âu Lạc
+url = https://vatlieulotsan.com/product/tham-xop-60-x-60-cm-mat-ni-hoa-van-au-lac/
 
 [lombom.com]
 match = -158.8%%
