--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-19 06:28:46
+lastsearch = 2024-07-19 12:44:45
 
 [www.lazada.vn]
-match = -146.7%%
-title = vo goi tua lung - Vỏ gối vuông tựa lưng size 45x45cm
-url = https://www.lazada.vn/products/vo-goi-vuong-tua-lung-size-45x45-vo-goi-vuong-vo-goi-tua-lung-i222143115.html
+match = -166.7%%
+title = Vỏ gối vuông tựa cỡ 45x45cm in sắt nét (Không kèm ruột)
+url = https://www.lazada.vn/products/vo-goi-vuong-tua-co-45x45cm-in-sat-net-khong-kem-ruot-i995000529.html
 
 [shopee.vn]
 match = -140.0%%
@@ -27,9 +27,9 @@ title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
 url = https://chus.vn/vo-goi-vuong-hmong/
 
 [ninhouse.vn]
-match = -193.3%%
-title = Áo gối | Bao gối đẹp giá rẻ NIN House cao cấp tại Tphcm
-url = https://ninhouse.vn/collections/vo-goi
+match = -106.7%%
+title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [lepetit.com.vn]
 match = -6.7%%
