--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-07-19 11:47:09
+lastsearch = 2024-07-19 13:43:14
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/everon/chan-ga-goi-everon.html
 
 [songhongonline.vn]
 match = 0.0%%
-title = Bộ sản phẩm SH_BC22 057
-url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
+title = Bộ sản phẩm SH_BC23 084
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-084
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
-match = -10.5%%
-title = Bộ Chăn Ga Gối Eu04
-url = https://antbedding.com/bo-chan-ga-goi-eu04
+match = 20.6%%
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia SH016
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-sh016
 
 [shopee.vn]
 match = 50.0%%
@@ -33,8 +33,8 @@ url = https://shopee.vn/Bộ-ga-chun-chần-bốn-mùa-EVERON-180*200-ESTR-23054
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EST-22034 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-est22034.html
+title = Everon EPM-22072 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22072.html
 
 [everonchinhhang.vn]
 match = 0.0%%
@@ -72,9 +72,9 @@ title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22062
 url = https://songhong.info/chan-ga-goi-khong-chan-bc62
 
 [kona.com.vn]
-match = 41.2%%
-title = Bộ ga chần chăn 4 mùa Diamond 188 - kona
-url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-diamond-188
+match = 58.8%%
+title = Bộ ga chần chăn 4 mùa MOC 2 - kona
+url = https://kona.com.vn/products/bo-ga-chan-chan-4-mua-moc-2
 
 [www.everonvni.vn]
 match = 23.5%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180-x-200cm-esb23022
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
@@ -102,9 +102,9 @@ title = Bộ bọc Moder 03 (Ga chun chần)
 url = http://dreamland.vn/Bo-boc-Moder-03-(Ga-chun-chan)-i4155.html
 
 [www.everonqb.com]
-match = 67.7%%
-title = Bộ ga chun chần MC20208 180x200
-url = https://www.everonqb.com/bo-ga-chun-chan-mc20208-180x200.html
+match = 20.6%%
+title = Everon Quảng Bình Bộ chăn bốn mùa EPC21053 180x200
+url = https://www.everonqb.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [changagoidemsonghong.online]
 match = -38.2%%
