--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-07-19 11:16:53
+lastsearch = 2024-07-19 13:39:54
 
 [agasound.vn]
 match = 6.7%%
@@ -27,9 +27,9 @@ title = AALTO - YOUR CELEBRATING SPOT IN D2! 🎉 It's the end ...
 url = https://www.instagram.com/aalto.vn/p/CmGX0BkvJ0r/
 
 [www.facebook.com]
-match = -160.0%%
-title = BẠN CÓ HẸN VỚI PERCE%%T NGUYỄN GIA TRÍ 69/1/7 ...
-url = https://www.facebook.com/percentcoffee.vn/videos/bạn-có-hẹn-với-percet-nguyễn-gia-trí6917-nguyễn-gia-trí-p25-quận-bình-thạnh-với-/2962693920542427/
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [grandpark-vinhomes.com]
 match = -186.7%%
@@ -52,8 +52,8 @@ title = LineaBon D3K2 | Vitamin D3 K2 Tăng chiều cao hiệu quả cho ...
 url = https://www.lineabon.vn/product-page/lineabon-d3k2
 
 [www.diepxuan.com]
-match = 33.3%%
-title = Điệp Xuân Chiếu lác D2 12
+match = 20.0%%
+title = Chiếu lác D2 12 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
