--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-07-19 10:40:44
+lastsearch = 2024-07-19 13:36:12
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -197,9 +197,9 @@ title = Người đàn ông đi lạc trong rừng Quảng Nam suốt 4 ngày ..
 url = https://thanhnien.vn/nguoi-dan-ong-di-lac-trong-rung-quang-nam-suot-4-ngay-chi-uong-nuoc-cam-hoi-185240608180716305.htm
 
 [baotintuc.vn]
-match = -206.2%%
-title = Chiều tối 8/6, các tỉnh Lào Cai, Cao Bằng, Thái Nguyên đề ...
-url = https://baotintuc.vn/van-de-quan-tam/chieu-toi-86-cac-tinh-lao-cai-cao-bang-thai-nguyen-de-phong-sat-lo-dat-lu-quet-20240608175442898.htm
+match = -175.0%%
+title = Triển vọng thương mại Canada - Việt Nam sau 30 hợp tác
+url = https://baotintuc.vn/thoi-su/trien-vong-thuong-mai-canada-viet-nam-sau-30-hop-tac-20240719083820724.htm
 
 [tamanhhospital.vn]
 match = -212.5%%
@@ -282,9 +282,9 @@ title = Địa chấn lớn nhất EURO 2024: Georgia đánh bại Bồ Đào ..
 url = https://baolongan.vn/dia-chan-lon-nhat-euro-2024-georgia-danh-bai-bo-dao-nha-khien-ronaldo-hoan-toan-tat-tieng-a178337.html
 
 [vietstock.vn]
-match = -218.8%%
-title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
+match = -212.5%%
+title = Phân tích kỹ thuật phiên chiều 19/07: Tâm lý bi quan dần ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1907-tam-ly-bi-quan-dan-hien-huu-585-1209089.htm
 
 [baohungyen.vn]
 match = -200.0%%
