--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-07-19 09:01:46
+lastsearch = 2024-07-19 13:35:39
 
 [www.georgianicols.com]
 match = -184.6%%
@@ -37,9 +37,9 @@ title = Northwest Georgia Scanner
 url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
-match = -146.2%%
-title = The Gummy Bear Song - Long English Version
-url = https://www.youtube.com/watch?v=astISOttCQ0
+match = -323.1%%
+title = Our New Friend, Gani (30 mins) l Episode 9 l Tayo the Little Bus
+url = https://www.youtube.com/watch?v=8L7o3sc3crI
 
 [www.regmovies.com]
 match = -223.1%%
@@ -52,9 +52,9 @@ title = CDL Licensing Information FAQs | Georgia Department of ...
 url = https://dds.georgia.gov/cdl-licensing-information-faqs
 
 [www.instagram.com]
-match = -84.6%%
-title = George_ahhh - Georgia Ellenwood
-url = https://www.instagram.com/george_ahhh/?hl=en
+match = -10.0%%
+title = sylviagani
+url = https://www.instagram.com/sylviagani/?hl=en
 
 [www.nebf.com]
 match = -46.2%%
