CI images update

--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-19 06:19:38
+lastsearch = 2024-07-19 14:20:46
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Giá Bao Nhiêu?
 url = https://chanrathanhthuy.com/tin-tuc/chieu-truc-gia-bao-nhieu-1132.html
 
 [www.facebook.com]
-match = 5.3%%
-title = Thế Giới Chiếu Trúc
-url = https://www.facebook.com/thegioichieutruc/
+match = 8.3%%
+title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
+url = https://www.facebook.com/chieutructot/?locale=vi_VN
 
 [www.yellowpages.vn]
 match = -37.5%%
@@ -32,9 +32,9 @@ title = Chiếu trúc 1m6 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu/trúc/1m6
 
 [chieutrucsaigon.com]
-match = 8.3%%
-title = MUA CHIẾU TRÚC CHÍNH HÃNG QUẬN TÂN BÌNH
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/mua-chieu-truc-quan-tan-binh-76.html
+match = 12.5%%
+title = CUNG CẤP CHIẾU TRÚC QUẬN PHÚ NHUẬN
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/cung-cap-chieu-truc-quan-phu-nhuan-75.html
 
 [www.lazada.vn]
 match = -62.5%%
@@ -47,9 +47,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.youtube.com]
-match = -83.3%%
-title = Hôm nay mới được nằm thử chiếc chiếu trúc, vô cùng mát mẻ ...
-url = https://www.youtube.com/watch?v=kKMas4N_KAk
+match = 25.0%%
+title = Review chiếu trúc hạt đen
+url = https://www.youtube.com/watch?v=XsFS_4Jr5lc
 
 [www.chotot.com]
 match = -54.2%%
@@ -195,4 +195,9 @@ url = https://znews.vn/diem-chuan-cao-nhat-dh-bach-khoa-tphcm-la-19-5-post263746
 match = -79.2%%
 title = Xổ số Minh Ngọc™ Kết Quả Xổ Số Trực Tiếp NHANH NHẤT
 url = https://www.minhngoc.net.vn/
+
+[www.erav.vn]
+match = -91.7%%
+title = EVNGENCO1 chủ động triển khai nhiều giải pháp để thực ...
+url = https://www.erav.vn/tin-tuc/t36669/evngenco1-chu-dong-trien-khai-nhieu-giai-phap-de-thuc-hien-tot-nhiem-vu-cung-ung-dien.html
 
