--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-19 03:46:16
+lastsearch = 2024-07-19 14:19:05
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -62,9 +62,9 @@ title = Rạp Lotte Kosmo Tây Hồ - Lịch chiếu, Giá vé, Ưu đãi
 url = https://moveek.com/rap/lotte-kosmo-tay-ho/
 
 [baolongan.vn]
-match = -31.2%%
-title = Nhớ nghề dệt chiếu quê tôi
-url = https://baolongan.vn/nho-nghe-det-chieu-que-toi-a168262.html
+match = -125.0%%
+title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
+url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
 match = -256.2%%
@@ -132,9 +132,9 @@ title = Dự báo thời tiết TP.HCM ngày 16/7: Mưa dông về chiều ...
 url = https://vtcnews.vn/du-bao-thoi-tiet-tp-hcm-ngay-16-7-mua-dong-ve-chieu-nhiet-do-giam-ar883459.html
 
 [vietstock.vn]
-match = -218.8%%
-title = Phân tích kỹ thuật phiên chiều 16/07: Tâm lý lạc quan quay ...
-url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1607-tam-ly-lac-quan-quay-tro-lai-585-1207761.htm
+match = -212.5%%
+title = Phân tích kỹ thuật phiên chiều 19/07: Tâm lý bi quan dần ...
+url = https://vietstock.vn/2024/07/phan-tich-ky-thuat-phien-chieu-1907-tam-ly-bi-quan-dan-hien-huu-585-1209089.htm
 
 [www.dcine.vn]
 match = 20.0%%
@@ -202,9 +202,9 @@ title = Hà Nội: Ngày tu an lạc tháng 5 năm Giáp Thìn tại chùa Bằn
 url = https://phatsuonline.vn/ha-noi-ngay-tu-an-lac-thang-5-nam-giap-thin-tai-chua-bang-74
 
 [www.facebook.com]
-match = -200.0%%
-title = Triệt phá sòng tài xỉu, tạm giữ trên... - BÌNH YÊN SÓC ...
-url = https://www.facebook.com/story.php/?story_fbid=862557122552945&id=100063959955304
+match = -27.3%%
+title = meomeotalks
+url = https://www.facebook.com/meomeotalks/
 
 [www.yenbai.gov.vn]
 match = -193.8%%
@@ -525,4 +525,9 @@ url = https://yellowpages.com.vn/categories/303355/herbs-and-spices-(ginger-turm
 match = -193.8%%
 title = https://www.epa.gov/sites/default/files/2016-02/ac...
 url = https://www.epa.gov/sites/default/files/2016-02/activeestablishmentlist.csv
+
+[bvhungvuong.vn]
+match = -75.0%%
+title = Giờ làm việc các khoa khám ngoại trú
+url = https://bvhungvuong.vn/danh-cho-benh-nhan/gio-lam-viec-cac-khoa-kham-ngoai-tru
 
