--- a/images/nem-dreamland-uc-150x190x09/config.ini
+++ b/images/nem-dreamland-uc-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-dreamland-uc-150x190x09.html
 lastopen = 2024-06-06 16:44:38
 
 [search]
-lastsearch = 2024-07-19 12:37:00
+lastsearch = 2024-07-19 14:14:33
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -27,9 +27,9 @@ title = AUA - Magknight789 v1.8+ Austrian - 787-9 V5 Liveries
 url = https://forums.x-plane.org/index.php?/files/file/70754-aua-magknight789-v18-austrian/
 
 [www.linkedin.com]
-match = -100.0%%
-title = Nerissa A. on LinkedIn: #fld23 #floridadreamin #salesforce ...
-url = https://www.linkedin.com/posts/nerissaabner_fld23-floridadreamin-salesforce-activity-7122389180927614976-hsjT
+match = -10.0%%
+title = Andrea Fallin's Post
+url = https://www.linkedin.com/posts/andreavaleriofallin_healthcare-industry-celebrates-honors-nacds-activity-7141378133982642176-ru8J
 
 [allnurses.com]
 match = -70.4%%
@@ -62,12 +62,17 @@ title = Dreamland USA
 url = https://www.youtube.com/watch?v=HnASa4Z4xY8
 
 [www.airliners.net]
-match = -85.2%%
-title = COVID-19 Cargo Discussion Thread (Cargo Operators and ...
-url = https://www.airliners.net/forum/viewtopic.php?t=1442899&start=400
+match = -55.6%%
+title = European Multirole MPA Replacement, C-500 Beagle ...
+url = https://www.airliners.net/forum/viewtopic.php?t=1450275&start=50
 
 [www.wineberserkers.com]
 match = -166.7%%
 title = WINE TALK
 url = https://www.wineberserkers.com/t/tn-easton-dtr-spring-release-short-boring/143313
+
+[www.steelsoldiers.com]
+match = -66.7%%
+title = WOO HOO! Original Genset filters available that fit
+url = https://www.steelsoldiers.com/threads/woo-hoo-original-genset-filters-available-that-fit.46756/
 
