CI images update

--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-07-19 13:51:05
+lastsearch = 2024-07-19 15:17:14
 
 [erado.vn]
 match = 5.0%%
 title = Giường da hạng sang mã DV14
-url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html?srsltid=AfmBOorDeX2DXExItjaYLWdqA5nyq78vWctvAhXfUz0YFd_jDk6eh8PA
 
 [shopee.vn]
 match = -105.0%%
@@ -109,12 +109,12 @@ url = https://ochino.com/freeship-tham-chan-giuong-tham-bep-dai-1m6-50-chat-day-
 [www.lazada.vn]
 match = -50.0%%
 title = [HCM]VẢI BỐ GIƯỜNG XẾP US GIƯỜNG XẾP NHÔM MỸ
-url = https://www.lazada.vn/products/hcmvai-bo-giuong-xep-us-giuong-xep-nhom-my-i382022123.html
+url = https://www.lazada.vn/products/hcmvai-bo-giuong-xep-us-giuong-xep-nhom-my-i382022123.html?srsltid=AfmBOorIh6hMg0oZmesm5hi-S-zvz5fcXH_UjIiwUqDQJ8dJp_Dhus1O
 
 [www.diepxuan.com]
 match = 10.0%%
 title = Thảm giường Bode 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
+url = https://www.diepxuan.com/tham-giuong-bode-160x200.html?srsltid=AfmBOorsL7yWLxPEGRoF5zLgOPDwDDpkTQu0KapCmAnT33RejdULscs2
 
 [www.sendo.vn]
 match = -95.0%%
@@ -134,7 +134,7 @@ url = https://inoacliving.vn/blog/kich-thuoc-nem-tieu-chuan/
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 14 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-14.html?srsltid=AfmBOoreYEhy5zb0otdcvyDujEvgmkg_UGu_R8-vdV74aF1PqvrFrLnc
 
 [sofaphongkhach.vn]
 match = -40.0%%
