--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-19 11:21:01
+lastsearch = 2024-07-19 15:19:18
 
 [www.kymdan.com]
 match = 4.2%%
@@ -17,9 +17,9 @@ title = Bộ Ga Chun Tencel Việt Á - Siêu Mát [SALE -50%%]
 url = https://thegioidemviet.vn/bo-ga-chun-he-tc08/
 
 [toanhuyen.vn]
-match = -21.9%%
-title = Bộ Chăn Ga Lasante Vải Tencel - Đỏ Ruby Ga Chun ...
-url = https://toanhuyen.vn/san-pham/bo-chan-ga-lasante-vai-tencel-do-ruby-ga-chun-180x200cm/
+match = 6.2%%
+title = Bộ Chăn Ga 160x200cm Ga Phủ Lasante Vải Tencel
+url = https://toanhuyen.vn/san-pham/bo-chan-ga-160x200cm-ga-phu-lasante-vai-tencel-xam-dam-theu-anh-dao/
 
 [yeshomebedding.com]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Bộ ga chun KymDan 160x200 Tencel
 url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 
 [www.kymdan.us]
-match = 9.4%%
-title = KYMDAN | Our Quality Your Comfort
-url = https://www.kymdan.us/en/
+match = 20.0%%
+title = LACAS91004 / Kymdan Lavish CAS
+url = https://www.kymdan.us/en/lacas91001-kymdan-lavish-cas-3
 
 [sieuthidemcaocap.vn]
 match = 6.2%%
