--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-19 12:39:05
+lastsearch = 2024-07-19 15:18:20
 
 [tiki.vn]
 match = 16.0%%
@@ -27,9 +27,9 @@ title = Lừa đảo xuất khẩu lao động, người đàn ông Đài Loan l
 url = https://congly.vn/lua-dao-xuat-khau-lao-dong-nguoi-dan-ong-dai-loan-linh-12-nam-tu-399654.html
 
 [www.facebook.com]
-match = -84.0%%
-title = Đài Loan nằm dọc theo Vành đai lửa Thái Bình Dương, trung ...
-url = https://www.facebook.com/ptsvietnamesenews/videos/đài-loan-nằm-dọc-theo-vành-đai-lửa-thái-bình-dương-trung-bình-mỗi-năm-có-khoảng-/1955051404897312/
+match = 12.0%%
+title = Xin chào, tôi ở Đài Loan | Kaohsiung
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [vi.wikipedia.org]
 match = 6.7%%
@@ -47,9 +47,9 @@ title = Văn Mẫu Lớp 12 (Tập 2) - Google Books Result
 url = https://books.google.com/books?id=Y-AHEQAAQBAJ&pg=PT590&lpg=PT590&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=NzfS23pbVi&sig=ACfU3U1YtjJnpZhX6AWbOsFIofg_TyILEg&hl=en&sa=X&ved=2ahUKEwjt777osbKHAxUnEVkFHQ99Bp0Q6AF6BAgZEAM
 
 [www.skyscanner.com.vn]
-match = -48.0%%
-title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Hà Nội
-url = https://www.skyscanner.com.vn/routes/tpe/han/taipei-taiwan-taoyuan-to-ha-noi.html
+match = -52.0%%
+title = Vé máy bay giá rẻ từ Chicago đến Đài Loan - Skyscanner
+url = https://www.skyscanner.com.vn/routes/chia/tw/chicago-to-đai-loan.html
 
 [www.bestprice.vn]
 match = -64.0%%
@@ -67,9 +67,9 @@ title = Phim Đài Loan
 url = https://tvmotchill.com/quoc-gia/phim-dai-loan/
 
 [www.youtube.com]
-match = -84.0%%
-title = Tin quốc tế 22/12 | Biệt kích Đài Loan và chiến thuật khiến ...
-url = https://www.youtube.com/watch?v=AJFnLR4FsNE
+match = -88.0%%
+title = Lồng Tiếng | CHỊU THUA TRƯỚC EM - Tập 12 | Trọn Bộ Phim ...
+url = https://www.youtube.com/watch?v=Qzd1oRmbvFM
 
 [znews.vn]
 match = -40.0%%
@@ -117,9 +117,9 @@ title =
 url = https://www.vietnambooking.com/du-lich/blog-du-lich/du-lich-dai-loan-thang-12.html
 
 [trithucvn.co]
-match = -52.0%%
-title = 15 người Đài Loan vào Trung Quốc bị bắt giữ, 51 ...
-url = https://trithucvn.co/the-gioi/15-nguoi-dai-loan-vao-trung-quoc-bi-bat-giu-51-nguoi-bi-tham-van.html
+match = -76.0%%
+title = Ông Trump nói Đài Loan phải trả tiền cho Mỹ để được bảo ...
+url = https://trithucvn.co/the-gioi/ong-trump-noi-dai-loan-phai-tra-tien-cho-my-de-duoc-bao-ve-khoi-trung-quoc.html
 
 [canbangdongclc.com]
 match = -8.0%%
@@ -245,4 +245,9 @@ url = https://saigondoor.vn/cua-nhua-dai-loan-yg-12/
 match = -66.7%%
 title = Taiwan Today
 url = https://vn.taiwantoday.tw/
+
+[www.mass.gov]
+match = -20.0%%
+title = MassHealth Adult Disability Supplement
+url = https://www.mass.gov/doc/masshealth-adult-disability-supplement-vietnamese/download
 
