--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-19 14:32:33
+lastsearch = 2024-07-19 15:21:53
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -47,9 +47,9 @@ title = nhà cái uy tín ♐️【WW88.game】Casino Online
 url = https://hoanghaco.com.vn/muv/F08bet.xhtml
 
 [www.youtube.com]
-match = -200.0%%
-title = Vietnamese Baguette Recipe - BÁNH MÌ VIỆT NAM - KNEAD ...
-url = https://www.youtube.com/watch?v=yzQ6rCK8pJw
+match = -143.8%%
+title = LẶNG LẼ CHIỀU TAN CA ! Ế DÀI CẢNH CHỢ CÔNG NHÂN ...
+url = https://www.youtube.com/watch?v=aMNreu6QNI8
 
 [saigontourist.edu.vn]
 match = -162.5%%
@@ -502,9 +502,9 @@ title = Phan Thanh Nhàn (@ptn.18) • Instagram photos and videos
 url = https://www.instagram.com/ptn.18/
 
 [congan.com.vn]
-match = -200.0%%
-title = Trên đường đi học về, nam sinh ngã vào gầm xe đầu kéo ...
-url = https://congan.com.vn/giao-thong-24h/tren-duong-di-hoc-ve-nam-sinh-nga-vao-gam-xe-dau-keo-bi-can-tu-vong_164835.html
+match = -250.0%%
+title = Tạm giữ tài xế xe tải tông một phụ nữ tử vong, rồi lái xe bỏ ...
+url = https://congan.com.vn/giao-thong-24h/tam-giu-tai-xe-xe-tai-tong-chet-mot-phu-nu-roi-bo-tron_164879.html
 
 [2sao.vn]
 match = -106.2%%
@@ -535,4 +535,14 @@ url = https://baocaobang.vn/dai-hoi-dai-bieu-hoi-lhtn-ha-quang-lan-thu-vi-nhiem-
 match = -44.4%%
 title = QUATEST 3
 url = https://quatest3.com.vn/
+
+[nbtv.vn]
+match = -206.2%%
+title = Những lưu ý trong chế độ dinh dưỡng cho bệnh nhân tăng ...
+url = https://nbtv.vn/nhung-luu-y-trong-che-do-dinh-duong-cho-benh-nhan-tang-huyet-ap-75895.html
+
+[advertisingvietnam.com]
+match = -200.0%%
+title = 4 chiến dịch nổi bật tuần qua: Heinz hợp tác với Marvel ...
+url = https://advertisingvietnam.com/4-chien-dich-noi-bat-tuan-qua-heinz-hop-tac-voi-marvel-tung-ra-2-loai-nuoc-sot-phien-ban-gioi-han-mcdonalds-ky-niem-sinh-nhat-lan-thu-50-cung-loat-ap-phich-phong-cach-retro-p24842
 
