--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-19 14:44:15
+lastsearch = 2024-07-19 15:21:32
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -32,14 +32,14 @@ title = Bộ drap mền Thắng Lợi cotton cao cấp giá chỉ 700k
 url = https://nemtotgiare.com/san-pham/bo-drap-cotton-thang-loi-90.html
 
 [tiki.vn]
-match = -44.0%%
-title = Ga trải giường thắng lợi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=ga trải giường thắng lợi
+match = -64.0%%
+title = Bộ Chăn Drap Gối Cotton Hoa Thắng Lợi Mẫu 27 - Chính hãng
+url = https://tiki.vn/bo-chan-drap-goi-cotton-hoa-thang-loi-mau-22-chinh-hang-p273206001.html?spid=273206003
 
 [nemhana.com]
-match = -40.0%%
-title = Ga chun tiện lợi và thoáng mát, chính hãng giảm 15%%
-url = https://nemhana.com/ga-chun/
+match = -68.0%%
+title = Nhẹ nâng giấc ngủ Việt với nệm cao su non Thắng Lợi
+url = https://nemhana.com/nem-cao-su-non-thang-loi/
 
 [demxanh.com]
 match = -8.0%%
@@ -90,4 +90,9 @@ url = https://www.nemthangloionline.com/
 match = -48.0%%
 title = Ga chun trải giường thắng lợi Silk & Cotton Tl56 giá rẻ
 url = https://nemthangloi.org/san-pham/ga-chun-trai-giuong-thang-loi-silk-cotton-tl56/
+
+[vuanem.com]
+match = -4.0%%
+title = Tìm hiểu về drap giường Thắng Lợi
+url = https://vuanem.com/blog/drap-giuong-thang-loi.html
 
