--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-07-19 14:30:20
+lastsearch = 2024-07-19 15:22:38
 
 [shopee.vn]
-match = -8.3%%
-title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
+match = -87.5%%
+title = Thảm Len mịn khổ 40x60 siêu thấm hút, chống trơn trượt ...
+url = https://shopee.vn/Thảm-Len-mịn-khổ-40x60-siêu-thấm-hút-chống-trơn-trượt-in-hình-logo-bàn-chân-i.537614356.24901886559
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -39,7 +39,7 @@ url = https://bichha.vn/tham-welcome-40cmx60cm-nh.html
 [www.lottemart.vn]
 match = -45.8%%
 title = Thảm Len Hình Thú 40x60 cm (Giao Màu Ngẫu Nhiên)
-url = https://www.lottemart.vn/vi-nsg/product/animal-patterned-wool-rug-40x60cm-random-color-delivery-8936186271359-p46359
+url = https://www.lottemart.vn/vi-vih/product/tham-len-hinh-thu-40x60-cm-8936186271359-p46359
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -70.8%%
-title = Thảm chùi chân,LEN MỊN thảm lau chân chống trơn trượt ...
-url = https://www.lazada.vn/products/tham-chui-chanlen-min-tham-lau-chan-chong-tron-truot-hang-cao-cap-mau-moi-40-60cm-i1342643160.html
+match = -37.5%%
+title = thảm welcome 40x60 Thảm chùi chân nhựa Welcome
+url = https://www.lazada.vn/products/tham-welcome-40x60-tham-chui-chan-nhua-welcome-i160063126.html
 
 [megahomevietnam.com]
 match = 20.0%%
