--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-07-19 14:47:33
+lastsearch = 2024-07-19 15:17:47
 
 [demxanh.com]
 match = 0.0%%
@@ -17,14 +17,14 @@ title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
 url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
 
 [tiki.vn]
-match = -47.8%%
-title = Mua Thảm trải sàn bali cao cấp kích thước 160*230cm
-url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-p44108490.html?spid=160905191/
+match = -78.3%%
+title = Thảm trải sàn bali cao cấp kích thước 160*230cm mới - Tiki
+url = https://tiki.vn/tham-trai-san-bali-cao-cap-kich-thuoc-160-230cm-moi-p41436661.html?spid=41436661
 
 [thegioidemviet.vn]
-match = -65.2%%
-title = Thảm trải sàn Bali M2 hàng cao cấp, mẫu mã đa dạng
-url = https://thegioidemviet.vn/tham-trai-san-bali-m2/
+match = -104.3%%
+title = Thảm trải sàn Bali M1 cao cấp, giá tốt nhất trên thị trường
+url = https://thegioidemviet.vn/tham-trai-san-bali-m1/
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -105,4 +105,9 @@ url = https://dev.nhaxinh.com/sac-mau-mua-ha-cho-phong-khach-tuoi-moi/
 match = -21.4%%
 title = 5 days in Bali
 url = https://www.youtube.com/watch?v=JNgo_ezn-S8
+
+[www.instagram.com]
+match = 33.3%%
+title = Bali 2020 > Bali 2023
+url = https://www.instagram.com/p/CxzoBgzpC5m/
 
