CI images update

--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-07-19 14:20:34
+lastsearch = 2024-07-19 15:33:39
 
 [shopee.vn]
 match = -14.8%%
@@ -17,9 +17,9 @@ title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
 url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [www.lazada.vn]
-match = -48.1%%
-title = Chăn Nhung Mùa Đông Thành Công,Loại 2kg, 3kg, 4kg, 5kg
-url = https://www.lazada.vn/products/chan-nhung-long-tuyet-chan-nhung-mua-dong-thanh-congloai-2kg-3kg-4kg-5kg-i2043299346.html
+match = -44.4%%
+title = Chăn Lông tuyết KQ 3 Lớp - Chăn 5kg hàng cao cấp chất ...
+url = https://www.lazada.vn/products/chan-long-tuyet-kq-3-lop-chan-5kg-hang-cao-cap-chat-luong-caocuc-ky-am-cho-ngay-ret-dai-han-i2044231389.html
 
 [tiki.vn]
 match = 11.1%%
@@ -58,8 +58,8 @@ url = https://www.youtube.com/watch?v=jP8fe_ad4Tw
 
 [lasantevn.com]
 match = -11.1%%
-title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC NÂU(DOUBLE) - Lasante
-url = https://lasantevn.com/chan-long-gau-bac-cuc-nau-2-mat-lasante-phap/
+title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
+url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [www.nguoi-viet.com]
 match = -59.3%%
