--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-19 12:32:01
+lastsearch = 2024-07-19 15:32:34
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -560,4 +560,9 @@ url = https://baobacgiang.vn/thai-lan-xac-dinh-nghi-pham-dau-doc-nhom-nguoi-viet
 match = -114.3%%
 title = Hướng dẫn cách tự kê khai thuế thu nhập cá nhân online ...
 url = https://esign.misa.vn/6850/ke-khai-thue-thu-nhap-ca-nhan-online/
+
+[www.pharmacity.vn]
+match = -100.0%%
+title = Trẻ 14 tháng biết làm gì? Cách chăm sóc bé khỏe mạnh
+url = https://www.pharmacity.vn/tre-14-thang-biet-lam-gi.htm
 
