--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-07-19 13:52:21
+lastsearch = 2024-07-19 15:37:50
 
 [bedding.vn]
 match = -123.1%%
@@ -137,8 +137,8 @@ title = Closed Corporate Integrity Agreements | Compliance
 url = https://oig.hhs.gov/compliance/corporate-integrity-agreements/closed-cias.asp
 
 [profiles.ucsf.edu]
-match = -23.1%%
-title = Michael Matthay, MD
+match = -115.4%%
+title = Michael Matthay, MD - UCSF Profiles
 url = https://profiles.ucsf.edu/michael.matthay
 
 [bse.berkeley.edu]
@@ -345,4 +345,19 @@ url = https://codes.findlaw.com/ga/title-16-crimes-and-offenses/ga-code-sect-16-
 match = -15.4%%
 title = SHP Alumni Athletes
 url = https://www.shschools.org/athletics/alumni-athletes-in-action
+
+[ceu.berkeley.edu]
+match = 0.0%%
+title = 
+url = https://ceu.berkeley.edu/degree-progress-and-requirements/degree-requirements/
+
+[www.sjsu.edu]
+match = -61.5%%
+title = San José State University
+url = https://www.sjsu.edu/
+
+[linlab.phhp.ufl.edu]
+match = -315.4%%
+title = News » Dr. Zhoumeng Lin's Lab » College of Public Health ...
+url = https://linlab.phhp.ufl.edu/news/
 
