--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-07-19 11:48:44
+lastsearch = 2024-07-19 15:36:55
 
 [changagoidemsonghong.com]
-match = 33.3%%
-title = Bộ chăn ga gối 100%% cotton mã mầu BC22-061
-url = https://changagoidemsonghong.com/chan-ga-goi-bc61
+match = 18.5%%
+title = chăn ga gối cotton cao cấp Archives
+url = https://changagoidemsonghong.com/chan-ga-goi-cotton-cao-cap
 
 [demhong.vn]
 match = 11.1%%
@@ -62,9 +62,9 @@ title = Bộ Chăn Ga Gối Sông Hồng Tencel S16 01 Ga Chun
 url = https://songhonghanoi.vn/bo-chan-ga-goi-song-hong-tencel-s1601-ga-chun.html
 
 [alnena.vn]
-match = 14.8%%
-title = Bộ Chăn Ga Gối Mỏng 100%% COTTON ALNENA Mã A1441
-url = https://alnena.vn/products/bo-chan-ga-goi-mong-100-cotton-alnena-ma-a1441
+match = -3.7%%
+title = Bộ Chăn Ga Gối Chun Trần Alnena 100%% Cotton Mã A21237
+url = https://alnena.vn/products/bo-chan-ga-goi-chun-tran-alnena-100-cotton-ma-a21237
 
 [bedding.vn]
 match = 11.1%%
@@ -72,9 +72,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16
 url = https://bedding.vn/chan-ga-goi-song-hong-uc16/
 
 [shopee.vn]
-match = -37.0%%
-title = Bộ chăn ga và vỏ gối hè thu gọn nhẹ , Mền Ga Gối Poly ...
-url = https://shopee.vn/Bộ-chăn-ga-và-vỏ-gối-hè-thu-gọn-nhẹ-Mền-Ga-Gối-Poly-cotton-chần-bông-3-lớp-i.78513158.15278376186
+match = -66.7%%
+title = Bộ ga gối 4 món poly cotton drap giường bo chun miễn phí ...
+url = https://shopee.vn/Bộ-ga-gối-4-món-poly-cotton-drap-giường-bo-chun-miễn-phí-bộ-chăn-ga-gối-4-món-mùa-hè-cao-cấp-Otama-Bedding-i.472596491.10822106491
 
 [lynconcept.com]
 match = -25.9%%
@@ -152,9 +152,9 @@ title = Chăn ga gối Sông Hồng Urban mã mầu UC16 - Đệm Thiên Kim
 url = https://demthienkim.com/chan-ga-goi-song-hong-uc16/
 
 [elmichsleep.vn]
-match = -29.6%%
-title = Chăn Ga Gối - Cao Cấp - Đạt chuẩn chất lượng Châu Âu
-url = https://elmichsleep.vn/chan-ga-goi
+match = -18.5%%
+title = Bộ chăn ga 100%% Cotton Ranforce - Elmich Dr.Sleep
+url = https://elmichsleep.vn/bo-chan-ga-100-cotton-ranforce
 
 [khodemgiagoc.com]
 match = -37.0%%
