--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-19 09:53:19
+lastsearch = 2024-07-19 15:35:26
 
 [vnexpress.net]
 match = -128.6%%
@@ -27,9 +27,9 @@ title = Tất tần tật kinh nghiệm về tour du lịch Vũng Tàu 2022
 url = https://liontrip.vn/tat-tan-tat-kinh-nghiem-ve-tour-du-lich-vung-tau/
 
 [haivan.com]
-match = -85.7%%
-title = Kinh nghiệm du lịch Vũng Tàu cho gia đình - 2 ngày 1 đêm
-url = https://haivan.com/diem-den/Vung-tau/kinh-nghiem-du-lich-vung-tau-cho-gia-dinh-2-ngay-1-dem
+match = -66.7%%
+title = Kinh nghiệm du lịch Vũng Tàu 3 ngày 2 đêm từ A đến Z
+url = https://haivan.com/diem-den/Vung-tau/kinh-nghiem-du-lich-vung-tau-3-ngay-2-dem-tu-a-den-z
 
 [lockernlock.vn]
 match = -71.4%%
@@ -172,8 +172,8 @@ title = UBND TiNR TUYEN QUANG sO' VAN HOA, THE THAO VA ...
 url = http://sovhttdl.tuyenquang.gov.vn/media/files/2020/143ttr_1_2020091604340788688020200916043943729_Signed.pdf
 
 [www.ivivu.com]
-match = -100.0%%
-title = Gợi ý lịch trình du lịch Vũng Tàu 2 ngày 1 đêm dành cho ...
+match = -114.3%%
+title = Du lịch gia đình: Gợi ý lịch trình khám phá Vũng Tàu 2 ...
 url = https://www.ivivu.com/blog/2016/05/goi-y-lich-trinh-du-lich-vung-tau-2-ngay-1-dem-danh-cho-gia-dinh/
 
 [duongchung-ocvitbinhduong.com.vn]
