--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-19 11:18:00
+lastsearch = 2024-07-19 15:34:55
 
 [batdongsan.com.vn]
-match = -233.3%%
-title = Mua bán nhà đất tại đường Lý Chiêu Hoàng, Quận Bình Tân, 100
-url = https://batdongsan.com.vn/nha-dat-ban-duong-ly-chieu-hoang-phuong-an-lac-6/dt-tu-100m2-den-150m2
+match = -240.0%%
+title = Bán đất tại Đường Lý Chiêu Hoàng, Phường An Lạc, Quận Bình ...
+url = https://batdongsan.com.vn/ban-dat-duong-ly-chieu-hoang-phuong-an-lac-6/gia-tu-5-ty-den-7-ty-dt-tu-150m2-den-200m2
 
 [vinatools.com]
 match = -173.3%%
@@ -315,4 +315,14 @@ url = https://concung.com/xe-lac-xe-choi-chan/xe-scooter-3-banh-elsa-dca82009-q-
 match = -220.0%%
 title = Một con lắc đơn có chiều dài dây treo 1m dao động điều ...
 url = https://tuyensinh247.com/bai-tap-355803.html
+
+[bidv.com.vn]
+match = -100.0%%
+title = Sheet2
+url = https://bidv.com.vn/wps/wcm/connect/c134ee41-9574-458f-b39a-6b5fb9d23f2e/List+of+location+registration+KORONAPAY.xlsx?MOD=AJPERES&CVID=noYJGO0
+
+[files.customs.gov.vn]
+match = -146.7%%
+title = DANH SÁCH HÀNG HÓA NHẬP KHẨU YÊU CẦU KIỂM ...
+url = https://files.customs.gov.vn/CustomsCMS/TONG_CUC/2022/1/7/252DSsoitruocTongHop(7.1)c.pdf
 
