--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-19 14:19:30
+lastsearch = 2024-07-19 15:35:49
 
 [www.gov.uk]
 match = -200.0%%
@@ -915,4 +915,9 @@ url = https://jointheepic.com/vi/category/epic-extras/page/16/
 match = -225.0%%
 title = NTSB
 url = https://www.ntsb.gov/Pages/home.aspx
+
+[www.alaskasnewssource.com]
+match = -146.7%%
+title = Alaska's News Source | KTUU/KYES | Anchorage, AK
+url = https://www.alaskasnewssource.com/
 
