--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-19 13:21:26
+lastsearch = 2024-07-19 15:36:10
 
 [gobearcats.com]
 match = -142.1%%
@@ -132,14 +132,14 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -14.3%%
-title = Louise Laurent
-url = https://profiles.ucsd.edu/louise.laurent
+match = -21.1%%
+title = Karen Messer | UCSD Profiles
+url = https://profiles.ucsd.edu/karen.messer
 
 [som.cuanschutz.edu]
-match = -121.1%%
-title = Rubin Tuder, MD - School of Medicine - CU Anschutz
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17863
+match = -110.5%%
+title = Larry Allen, MD Professor, Medicine-Cardiology
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/13824
 
 [saveseattleschools.blogspot.com]
 match = -131.6%%
@@ -252,9 +252,9 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = -7.7%%
-title = Li Zhang, PhD
-url = https://profiles.ucsf.edu/li.zhang
+match = -47.4%%
+title = Arun Wiita, MD, PhD - UCSF Profiles
+url = https://profiles.ucsf.edu/arun.wiita
 
 [profiles.stanford.edu]
 match = -36.8%%
