CI images update

--- a/images/ruot-goi-ke-re/config.ini
+++ b/images/ruot-goi-ke-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-re.html
 lastopen = 2024-06-10 01:04:04
 
 [search]
-lastsearch = 2024-07-19 13:50:54
+lastsearch = 2024-07-19 15:48:42
 
 [www.thanhthuyhanh.com]
 match = -50.0%%
@@ -42,8 +42,8 @@ title = Ruột gối kê rẻ - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/ruot-goi-ke-re.html
 
 [hantexco.vn]
-match = -185.7%%
-title = Ruột gối cao cấp chính hãng Hantexco | Giá rẻ bất ngờ
+match = -221.4%%
+title = Ruột gối cao cấp chính hãng Hantexco, Giá thành tốt nhất
 url = https://hantexco.vn/ruot-goi/
 
 [thegioidemviet.vn]
