--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-19 13:38:43
+lastsearch = 2024-07-19 15:49:47
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -112,9 +112,9 @@ title = Xả kho ga gối chính hãng, khuyến mại giảm giá 2023
 url = https://thegioidemonline.com/ga-goi.html
 
 [scandalinen.vn]
-match = 0.0%%
-title = Bộ Chăn Ga Gối Linen Pháp Nhuộm Miếng Cam Đỏ F18
-url = https://scandalinen.vn/product/bo-chan-ga-goi-linen-phap-nhuom-mieng-cam-do-f18/
+match = -17.9%%
+title = Bộ Chăn Ga Gối Linen Pháp Nhuộm Sợi Kẻ Sọc Beige F61
+url = https://scandalinen.vn/product/bo-chan-ga-goi-linen-phap-nhuom-soi-ke-soc-beige-f61/
 
 [khodem.vn]
 match = -21.4%%
