--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-07-19 15:23:12
+lastsearch = 2024-07-19 15:50:21
 
 [shopee.vn]
 match = -43.5%%
@@ -33,8 +33,8 @@ url = https://m.facebook.com/497069713692846/videos/1865016670231470/?__so__=wat
 
 [chieutrucsaigon.com]
 match = -17.4%%
-title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [demxanh.com]
 match = -21.7%%
