--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-19 11:39:28
+lastsearch = 2024-07-19 15:47:20
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -282,9 +282,9 @@ title = Xe máy bật đèn chiếu xa trong khu đông dân cư bị phạt ...
 url = https://vtcnews.vn/xe-may-bat-den-chieu-xa-trong-khu-dong-dan-cu-bi-phat-bao-nhieu-tien-ar879703.html
 
 [thoibaotaichinhvietnam.vn]
-match = -181.2%%
-title = Chứng khoán phái sinh: Các hợp đồng rung lắc giảm điểm ...
-url = https://thoibaotaichinhvietnam.vn/chung-khoan-phai-sinh-cac-hop-dong-rung-lac-giam-diem-tro-lai-153854.html
+match = -200.0%%
+title = Thị trường bất động sản cuối năm 2024: Giai đoạn thích ...
+url = https://thoibaotaichinhvietnam.vn/thi-truong-bat-dong-san-cuoi-nam-2024-giai-doan-thich-nghi-va-lam-quen-155266.html
 
 [canbangdongclc.com]
 match = -75.0%%
