--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-07-19 14:34:11
+lastsearch = 2024-07-19 15:47:09
 
 [us.misumi-ec.com]
-match = -325.0%%
-title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA ...
+match = -350.0%%
+title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA Series
 url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
 
 [www.amazon.com]
