--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-19 12:35:36
+lastsearch = 2024-07-19 15:45:54
 
 [everon.vip]
-match = -10.0%%
-title = NỆM EVERON
-url = https://everon.vip/nem
+match = 44.4%%
+title = Nệm Everon Ceramic
+url = https://everon.vip/nem-everon-ceramic
 
 [everonvn.com.vn]
 match = 23.8%%
@@ -42,8 +42,8 @@ title = Đệm bông ép everon 160 x 200 x 15 cm hàng chính hãng, ...
 url = https://tiki.vn/search?q=đệm bông ép everon 160 x 200 x 15 cm
 
 [demqueensweet.com]
-match = -57.1%%
-title = Đệm Queensweet Giá Rẻ – Đệm Hàn Quốc ...
+match = -119.0%%
+title = Giá Đệm Queensweet, Đệm Hàn Quốc Queensweet Hà Nội ...
 url = https://demqueensweet.com/
 
 [everon365.vn]
@@ -52,9 +52,9 @@ title = Đệm bông ép Everon kết hợp topper 5cm
 url = https://everon365.vn/dem-bong-ep-everon-ket-hop-lop-topper-5cm.html
 
 [www.everonvn.vn]
-match = -100.0%%
-title = Bảng giá các kích thước đệm bông ép Everon vỏ gấm ...
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-vo-gam.html
+match = -95.2%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [everon.com.vn]
 match = -114.3%%
