--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-07-19 14:18:56
+lastsearch = 2024-07-19 15:45:01
 
 [www.reddit.com]
-match = -82.6%%
-title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+match = 4.3%%
+title = Nemesis hits rank 2 Korea - 1726 lp
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -117.4%%
-title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
-url = https://en.yna.co.kr/view/AEN20170907001852315
+match = -87.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [lol.fandom.com]
 match = 0.0%%
@@ -332,9 +332,9 @@ title = July-August 2024 (Volume 76, Number 3)
 url = https://monthlyreview.org/2024/07/01/mr-076-03-2024-07_0/
 
 [synapse.koreamed.org]
-match = -25.0%%
-title = Original Article
-url = https://synapse.koreamed.org/articles/1119644
+match = -2100.0%%
+title = 2
+url = https://synapse.koreamed.org/articles/1096353
 
 [www.svcleanenergy.org]
 match = 0.0%%
