--- a/images/vo-chan-ks-uc-20-230/config.ini
+++ b/images/vo-chan-ks-uc-20-230/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-230.html
 lastopen = 2024-06-10 00:43:14
 
 [search]
-lastsearch = 2024-07-19 12:36:40
+lastsearch = 2024-07-19 15:48:22
 
 [www.dir.ca.gov]
 match = -28.6%%
@@ -47,9 +47,9 @@ title = ADG465 Datasheet by Analog Devices Inc. | Digi-Key Electronics
 url = https://www.digikey.jp/htmldatasheets/production/51516/0/0/1/adg465.html
 
 [fsapartners.ed.gov]
-match = -45.0%%
-title = 2023-2024 Federal School Code List
-url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
+match = -60.0%%
+title = 2023-2024 Federal School Code List Q1
+url = https://fsapartners.ed.gov/sites/default/files/2022-10/2324FedSchoolCodeList.xlsx
 
 [finaid.org]
 match = 0.0%%
@@ -342,9 +342,9 @@ title = NTACT Evaluation Toolkit
 url = https://transitionta.org/wp-content/uploads/docs/toolkit_Evaluation.pdf
 
 [faculty.uci.edu]
-match = -115.0%%
-title = Nathan D. Wong - UC Irvine - Faculty Profile System
-url = https://faculty.uci.edu/profile/?facultyId=2414
+match = -140.0%%
+title = Nosratola D. Vaziri - UC Irvine - Faculty Profile System
+url = https://faculty.uci.edu/profile/?facultyId=2994
 
 [www.etecownersgroup.com]
 match = -115.0%%
